relctures des classe

--- a/data/classes/EizrWvUPMS67Pahd.htm
+++ b/data/classes/EizrWvUPMS67Pahd.htm
@@ -1,7 +1,6 @@
 Name: Cleric
 Nom: Prêtre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><em>Deities work their will upon the world in infinite ways, and you serve as one of their most stalwart mortal servants. Blessed with divine magic, you live the ideals of your faith, adorn yourself with the symbols of your church, and train diligently to wield your deity's favored weapon. Your spells might protect and heal your allies, or they might punish foes and enemies of your faith, as your deity wills. Yours is a life of devotion, spreading the teachings of your faith through both word and deed.</em><br /><br /><strong>Key Ability: WISDOM</strong><br />At 1st level, your class gives you an ability boost to Wisdom.<br /><br /><strong>Hit Points: 8 plus your Constitution modifier</strong><br />You increase your maximum number of HP by this number at 1st level and every level thereafter.</p>
@@ -954,10 +953,10 @@ Nom: Prêtre
 <p>Au niveau 1, vous obtenez un nombre de maîtrises, indiquées au début de cette classe, qui représentent votre entraînement de base.</p>
 <h2 class="title">Dons de prêtre<span style="float: right;">Niveau 2</span></h2>
 <p>Au niveau 2, puis tous les deux niveaux, vous gagnez un don de classe de prêtre.</p>
+<h2 class="title">Dons de compétences<span style="float: right;">Niveau 2</span></h2>
+<p>Au niveau 2, puis tous les deux niveaux, vous gagnez un don de compétence. Ces dons disposent du trait compétence. Pour choisir un don de compétence, vous devez être au moins qualifié dans la compétence correspondante.</p>
 <h2 class="title">Dons généraux<span style="float: right;">Niveau 3</span></h2>
 <p>Au niveau 3, puis tous les quatre niveaux, vous gagnez un don général. Les dons généraux figurent au chapitre 5.</p>
-<h2 class="title">Dons de compétences<span style="float: right;">Niveau 3</span></h2>
-<p>Au niveau 2, puis tous les deux niveaux, vous gagnez un don de compétence. Ces dons disposent du trait compétence. Pour choisir un don de compétence, vous devez être au moins qualifié dans la compétence correspondante.</p>
 <h2 class="title">Améliorations de compétence<span style="float: right;">Niveau 3</span></h2>
 <p>Au niveau 3, puis tous les deux niveaux, vous gagnez une amélioration de compétence. Vous pouvez utiliser cette amélioration pour devenir qualifié dans une compétence dans laquelle vous êtes inexpérimenté, ou pour devenir expert dans une compétence dans laquelle vous êtes déjà qualifié.</p>
 <p>Vous pouvez utiliser les augmentations de compétence que vous obtenez au niveau 7 ou plus pour devenir maître dans une compétence dans laquelle vous êtes expert, et les augmentations de compétence que vous obtenez au niveau 15 ou plus pour devenir légendaire dans une compétence dans laquelle vous êtes maître.</p>
@@ -966,7 +965,7 @@ Nom: Prêtre
 <h2 class="title">Vigilance<span style="float: right;">Niveau 5</span></h2>
 <p>Vous restez à l’affût des menaces alentour. Votre rang de maîtrise en Perception passe à expert.</p>
 <h2 class="title">Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
-<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé. La liste des dons ancestraux à votre disposition figure dans le chapitre 2, dans la section correspondant à votre ascendance.</p>
+<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé.</p>
 <h2 class="title">Résolution<span style="float: right;">Niveau 9</span></h2>
 <p>Votre résolution cuirasse votre esprit. Votre rang de maîtrise pour les jets de Volonté passe à maître. Quand vous obtenez un succès sur un jet de Volonté, vous remportez à la place un succès critique.</p>
 <h2 class="title">Réflexes éclair<span style="float: right;">Niveau 11</span></h2>
