--- a/data/classes/bYDXk9HUMKOuym9h.htm
+++ b/data/classes/bYDXk9HUMKOuym9h.htm
@@ -1,7 +1,6 @@
 Name: Witch
 Nom: Sorcière
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><em>You command powerful magic, not through study or devotion to any ideal, </em><em>but as a vessel or agent for a mysterious, otherworldly patron that even you </em><em>don't entirely understand. This entity might be a covert divinity, a powerful </em><em>fey, a manifestation of natural energies, an ancient spirit, or any other mighty supernatural </em><em>being-but its nature is likely as much a mystery to you as it is to anyone else. Through a </em><em>special familiar, your patron grants you versatile spells and powerful hexes to use as you see </em><em>fit, though you're never certain if these gifts will end up serving your patron's larger plan.</em></p>
@@ -1076,7 +1075,8 @@ Nom: Sorcière
 <h2 class="title">Primes de caractéristiques<span style="float: right;">Niveau 5</span></h2>
 <p>Au niveau 5, puis tous les cinq niveaux, vous améliorez quatre caractéristiques différentes. Vous pouvez utiliser ces primes de caractéristique pour faire passer une valeur de caractéristique au-dessus de 18. La prime augmente la valeur de caractéristique de 1 si elle est déjà de 18 ou plus ou de 2 si elle est inférieure à 18.</p>
 <h2 class="title">Dons ancestraux<span style="float: right;">Niveau 5</span></h2>
-<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé. <h2 class="title">Vigueur magique<span style="float: right;">Niveau 5</span></h2>
+<p>Vous gagnez un don ancestral au niveau 5 puis tous les quatre niveaux, en plus de celui avec lequel vous avez commencé.
+<h2 class="title">Vigueur magique<span style="float: right;">Niveau 5</span></h2>
 <p>La puissance de votre patron augmente votre résilience physique. Votre rang de maîtrise pour les jets de Vigueur passe à expert.</p>
 <h2 class="title">Incantateur expert<span style="float: right;">Niveau 7</span></h2>
 <p>Vous avez appris à mieux contrôler le pouvoir que votre patron vous a accordé. Vos rangs de maîtrise pour les jets d’attaque de sort et le DD des sorts de sorcière passent à expert.</p>
