--- a/data/classfeatures/rogue-01-uGuCGQvUmioFV2Bd.htm
+++ b/data/classfeatures/rogue-01-uGuCGQvUmioFV2Bd.htm
@@ -1,7 +1,6 @@
 Name: Rogue's Racket
 Nom: Trafics de roublard
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>As you started on the path of the rogue, you began to develop your own style to pursue your illicit activities. Your racket shapes your rogue techniques and the way you approach a job, while building your reputation in the criminal underworld for a certain type of work. A client with deep pockets might even hire a team of rogues for a particular heist, each specializing in a different racket, in order to cover all the bases. Choose a rogue's racket.</p>
@@ -14,10 +13,12 @@ Nom: Trafics de roublard
 <li>@Compendium[pf2e.classfeatures.wAh2riuFRzz0edPl]{Thief Racket}</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">En vous engageant sur la voie du roublard, vous développez votre propre style grâce auquel vous mènerez vos activités illicites. Votre trafic oriente vos techniques de roublard et la manière dont vous envisagez un coup, tout en contribuant à faire reconnaître votre talent pour un certain type de missions auprès de la pègre. Ainsi, un client fortuné qui envisage un casse pourra engager une équipe de roublards aux trafics spécialisés couvrant tous les aspects de la mission. Choisissez un trafic de roublard.</span></p>
-<p><span id="ctl00_MainContent_DetailedOutput">Les trafics présentés dans cet ouvrage sont les suivants :<br></span></p>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.RyOkmu0W9svavuAB]{Cerveau} (APG)</span></h2>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.D8qtAo2w4jsqjBrM]{Mystificateur} (APG)</span></h2>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.ZvfxtUMtfIOLYHyg]{Scélérat}</span></h2>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.3KPZ7svIO6kmmEKH]{Voyou}</span></h2>
-<h2><p><span id="ctl00_MainContent_DetailedOutput">>@Compendium[pf2e.classfeatures.wAh2riuFRzz0edPl]{Voleur}</span></h2>
+<p>En vous engageant sur la voie du roublard, vous développez votre propre style grâce auquel vous mènerez vos activités illicites. Votre trafic oriente vos techniques de roublard et la manière dont vous envisagez un coup, tout en contribuant à faire reconnaître votre talent pour un certain type de missions auprès de la pègre. Ainsi, un client fortuné qui envisage un casse pourra engager une équipe de roublards aux trafics spécialisés couvrant tous les aspects de la mission. Choisissez un trafic de roublard.</p>
+<p>Les trafics présentés dans cet ouvrage sont les suivants :</p>
+<ul>
+<li>@Compendium[pf2e.classfeatures.RyOkmu0W9svavuAB]{Cerveau}</li>
+<li>@Compendium[pf2e.classfeatures.D8qtAo2w4jsqjBrM]{Mystificateur}</li>
+<li>@Compendium[pf2e.classfeatures.ZvfxtUMtfIOLYHyg]{Scélérat}</li>
+<li>@Compendium[pf2e.classfeatures.3KPZ7svIO6kmmEKH]{Voyou}</li>
+<li>@Compendium[pf2e.classfeatures.wAh2riuFRzz0edPl]{Voleur}</li>
+</ul>
