capacités de classe remises en forme

--- a/data/classfeatures/alchemist-01-P9quO9XZi3OWFe1k.htm
+++ b/data/classfeatures/alchemist-01-P9quO9XZi3OWFe1k.htm
@@ -1,7 +1,6 @@
 Name: Toxicologist
 Nom: Toxicologiste
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You specialize in toxins and venoms of all types. You start with the formulas for two common 1st-level alchemical poisons in your formula book, in addition to your other formulas.</p>
@@ -18,10 +17,15 @@ Nom: Toxicologiste
 <h2 class="title">Perpetual Perfection<span style="float: right;">Level 17</span></h2>
 <p>Choose two common 11th-level or lower alchemical poisons.</p>
 ------ Description (fr) ------
-<p><strong>Découverte de domaine de recherche (Niveau 1):</strong> Vous vous spécialisez dans les toxines et les venins de toutes sortes. Vous débutez avec les formules de deux poisons aclhimiques courants dans votre livre de formules, en plus de vos autres formules. Vous pouvez appliquer un poison de blessure que vous tenez sur une arme que vous maniez par une action unique, plutôt que par une activité à 2 actions et vous pouvez changer les DD de vos poisons imprégnés jusqu'à votre DD de classe s'il est plus élevé.</p>
-<p><strong>découverte de domaine de recherche (Niveau 5): </strong>Lorsque vous utilisez alchimie avancée pour fabriquer des poisons durant vos préparatifs quotidiens, vous pouvez dépenser un lot de réactifs pour créer trois poisons de n'importe quelle sorte, au lieu de deux poisons de même sorte seulement.</p>
-<p><strong>Infusions perpétuelles (niveau 7): </strong>Choose two common&nbsp;1st-level alchemical poisons.</p>
-<p><strong>Puissance perpétuelle (niveau 11):</strong> Choisissez deux poisons courants de niveau 5 ou inférieur.</p>
-<p><strong>Découverte de domaine de recherche supérieur (niveau 15):</strong> Vous pouvez appliquer deux poisons de blessure différents sur la même arme, mais pas sur une munition. Les deux poisons doivent être de six niveaux plus faibles que votre niveau et vous ne pouvez utiliser les poisons concoctés en utilisant un lot de réactifs imprégnés par @Compendium[pf2e.classfeatures.LlZ5R50z9j8jysZL]{Infusions pérpétuelles}. Appliquer les deux poisons nécessite une action séparée pour apposer chacun des poisons.</p>
-<p>Une foix accompli, vous combinez les deux poisons sur l'arme en un poison double avec le DD le plus faible des deux. Ce poison double est virulent seulement si les deux poisons qui le composent étaient virulents et si les poisons ont un nombre différent de stades, le poison double possède un nombre de stades égal à celui du poison avec le plus faible nombre de stades. La cible subit les effets des deux poisons à son stade actuel.</p>
-<p><strong>Perfection perpétuelle (Niveau 17):</strong> Choisissez deux poisons courants de niveau 11 ou inférieurs.</p>
+<p>Vous vous spécialisez dans les toxines et les venins de toutes sortes. Vous débutez avec les formules de deux poisons aclhimiques courants dans votre recueil de formules, en plus de vos autres formules. Vous pouvez appliquer un poison de blessure que vous tenez sur une arme que vous maniez par une action unique, plutôt que par une activité à 2 actions et vous pouvez changer les DD de vos poisons imprégnés jusqu'à votre DD de classe s'il est plus élevé.</p>
+h2 class="title">Découverte de domaine de recherche<span style="float: right;">Niveau 5</span></h2>
+<p>Lorsque vous utilisez alchimie avancée pour fabriquer des poisons durant vos préparatifs quotidiens, vous pouvez dépenser un lot de réactifs pour créer trois poisons de n'importe quelle sorte, au lieu de deux poisons de même sorte seulement.</p>
+<h2 class="title">Infusion perpétuelle<span style="float: right;">Niveau 7</span></h2>
+<p>Choisissez deux poisons courants de niveau 1.</p>
+<h2 class="title">Puissance perpétuelle<span style="float: right;">Niveau 11</span></h2>
+<p><strong>Choisissez deux poisons courants de niveau 5 ou inférieur.</p>
+<h2 class="title">Découverte de domaine de recherche supérieur<span style="float: right;">Niveau 15</span></h2>
+<p>Vous pouvez appliquer deux poisons de blessure différents sur la même arme, mais pas sur une munition. Les deux poisons doivent être de six niveaux plus faibles que votre niveau et vous ne pouvez utiliser les poisons concoctés en utilisant un lot de réactifs imprégnés par Infusions pérpétuelles. Appliquer les deux poisons nécessite une action séparée pour apposer chacun des poisons.</p>
+<p>Une fois accompli, vous combinez les deux poisons sur l'arme en un poison double avec le DD le plus faible des deux. Ce poison double est virulent seulement si les deux poisons qui le composent étaient virulents et si les poisons ont un nombre différent de stades, le poison double possède un nombre de stades égal à celui du poison avec le plus faible nombre de stades. La cible subit les effets des deux poisons à son stade actuel.</p>
+<h2 class="title">Perfection perpétuelle<span style="float: right;">Niveau 17</span></h2>
+<p>Choisissez deux poisons alchimiques courants de niveau 11 ou inférieurs.</p>
