--- a/data/equipment/weapon-12-ED3By5mICaJeiQYo.htm
+++ b/data/equipment/weapon-12-ED3By5mICaJeiQYo.htm
@@ -1,6 +1,6 @@
 Name: Staff of the Black Desert
-Nom: 
-État: auto-trad
+Nom: Bâton du désert noir
+État: libre
 
 ------ Description (en) ------
 <p>This rough metal staff is pitted and sandblasted, with thousands of nigh-imperceptible sand crystals embedded in its surface.</p>
@@ -21,20 +21,21 @@ Nom:
 <li>+2 circumstance bonus to Occultism checks to identify aberrations and oozes native to the Darklands</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce bâton en métal brut est piqué et sablé, et des milliers de cristaux de sable imperceptibles sont incrustés dans sa surface.</p>
-<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'occultisme pour identifier les aberrations et les suintements originaires des terres sombres.</p>
-<p><strong>Activate</strong> Lancer un sort</p>
+<p>Ce bâton en métal brut est piqué et sablé, et des milliers de cristaux de sable quasi-imperceptibles sont incrustés sur sa surface.</p>
+<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres.</p>
+<p><strong>Activation</strong> Lancer un sort</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.tXa5vOu5giBNCjdR]{Connaître la Direction}<br /><strong>1er</strong> @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Créer de l'Eau} @Compendium[pf2e.spells-srd.qXTB7Ec9yYh5JPPV]{Purifier la nourriture et les boissons} @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Serviteur invisible}</li>
-<li><strong>2ème</strong> @Compendium[pf2e.spells-srd.pZTqGY1MLRjgKasV]{Vision Noire} @Compendium[pf2e.spells-srd.5esP2GVzvxWsMgaX]{Eléments d'endurance}</li>
-<li><strong>3ème</strong> @Compendium[pf2e.spells-srd.gPvtmKMRpg9I9D7H]{Earthbind} @Compendium[pf2e.spells-srd.SUKaxVZW2TlM8lu0]{Neutraliser Poison} @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{Guide du Vagabond}</li>
-<li><strong>4ème</strong> @Compendium[pf2e.spells-srd.b5sGjGlBf58f8jn0]{Marche aérienne} @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Terrain hallucinatoire} @Compendium[pf2e.spells-srd.GzdgM0m7wXKuFSho]{Truc de corde}</li>
-<li><strong>5e</strong> @Compendium[pf2e.spells-srd.qr0HOiiuqj5LKlDt]{Pilliers de Sable} @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{Veil}</li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.tXa5vOu5giBNCjdR]{Repérage}</li>
+<li><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.WzLKjSw6hsBhuklC]{Création d'eau} @Compendium[pf2e.spells-srd.qXTB7Ec9yYh5JPPV]{Purifier la nourriture et la boisson} @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Serviteur invisible}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.pZTqGY1MLRjgKasV]{Vision dans le noir} @Compendium[pf2e.spells-srd.5esP2GVzvxWsMgaX]{Endurance aux éléments}</li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.gPvtmKMRpg9I9D7H]{Cloué à terre} @Compendium[pf2e.spells-srd.SUKaxVZW2TlM8lu0]{Neutralisation du poison} @Compendium[pf2e.spells-srd.ppA1StEigPLKEQqR]{Guide du pélerin}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.b5sGjGlBf58f8jn0]{Marche dans les airs} @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Terrain hallucinatoire} @Compendium[pf2e.spells-srd.GzdgM0m7wXKuFSho]{Corde enchantée}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.qr0HOiiuqj5LKlDt]{Piliers de sable} @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{Voile}</li>
 </ul>
-<p><strong>Exigences d'artisanat</strong> Fournissez une incantation de tous les niveaux énumérés de tous les sorts énumérés.</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
-<li>Bonus de circonstances de +2 aux tests d'occultisme pour identifier les aberrations et les suintements originaires des Darklands</li>
+<li>Bonus de circonstances de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres</li>
 </ul>
