--- a/data/equipment/weapon-18-V2knI4GpdJYLupjg.htm
+++ b/data/equipment/weapon-18-V2knI4GpdJYLupjg.htm
@@ -1,6 +1,6 @@
 Name: Crystal Shards (Major)
 Nom: Éclats de cristal (majeur)
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p><strong>Usage</strong> held in 1 hand</p>
@@ -9,8 +9,9 @@ Nom: Éclats de cristal (majeur)
 <p>This flask holds a pressurized red-brown gas flecked with bits of sublimated crystal. You gain the listed item bonus to attack rolls. When the bomb explodes, it deals the listed piercing damage and piercing splash damage as the mixture suddenly turns into solid crystals flying at high speeds.</p>
 <p>Surfaces in the splash area grow brittle, gleaming red crystals that crumble to dust after 1 minute. The crystals on level surfaces are @Compendium[pf2e.equipment-srd.7fSnvJ2xoSfa6JXD]{Caltrops} (Core Rulebook 287). The crystals on vertical surfaces can be used briefly as handholds, granting the listed item bonus to the next Athletics check to @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Climb} each space. The crystals in each space crumble after the creature leaves, whether Climbing or moving through the caltrops.</p>
 ------ Description (fr) ------
-<p><strong>Usage</strong> tenu dans 1 main</p>
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Strike</p>
-<hr />
-<p>Cette fiole contient un gaz rouge-brun pressurisé moucheté de morceaux de cristal sublimé. Vous gagnez le bonus d'objet indiqué aux jets d'attaque. Lorsque la bombe explose, elle inflige les dégâts perforants et les dégâts d'éclaboussures indiqués, car le mélange se transforme soudainement en cristaux solides volant à grande vitesse.</p>
-Les surfaces situées dans la zone d'éclaboussure se transforment en cristaux rouges fragiles et brillants qui se réduisent en poussière après 1 minute. Les cristaux sur les surfaces planes sont des @Compendium[pf2e.equipment-srd.7fSnvJ2xoSfa6JXD]{Caltrops}. (Livre des Règles de base 287). Les cristaux sur les surfaces verticales peuvent être utilisés brièvement comme poignées, accordant le bonus d'objet indiqué au prochain test d'Athlétisme pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Grimper} dans chaque espace. Les cristaux de chaque espace s'effritent après le départ de la créature, qu'elle grimpe ou se déplace à travers les caltrops.</p>
+<p><strong>Utilisation</strong> Tenir à une main</p>
+<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Frappe</p>
+<hr>
+<p>Cette bouteille contient un gaz rouge-brun sous pression parsemé de morceaux de cristal sublimé. Vous gagnez le bonus d'objet listé pour les jets d'attaque. Lorsque la bombe explose, la cible subit les dégâts perforants et d'éclaboussure énumérés ci-après, car le mélange se transforme soudainement en cristaux solides volant à grande vitesse.</p>
+<p>Les surfaces dans la zone d'éclaboussure deviennent fragiles, des cristaux rouges luisants s'éffritant en poussière après 1 minute. Les cristaux sur les surfaces planes agissent alors comme des @Compendium[pf2e.equipment-srd.7fSnvJ2xoSfa6JXD]{chausse-trappes} (Livre de Base 287). Les cristaux sur les surfaces verticales peuvent être utilisés brièvement comme poignées, ce qui permet d'accorder le bonus de l'article énuméré au prochain test d'athlétisme pour @Compendium[pf2e.actionspf2e.pprgrYQ1QnIDGZiy]{Escalader} chaque espace. Les cristaux de chaque case s'effritent après le départ de la créature, qu'elle soit en train d'Escalader ou de se déplacer dans les chausse-trappes.</p>
+<p>Le bonus d'objet est de +3. La bombe inflige [[/r 4d4]] dégâts perforants et 6 points de dégâts d'éclaboussure perforants.</p>
