Finiiiiiiiiii ! Plus qu'à relire !

--- a/data/equipment/weapon-14-qtlkftQXfO4wuCVu.htm
+++ b/data/equipment/weapon-14-qtlkftQXfO4wuCVu.htm
@@ -1,5 +1,5 @@
 Name: Hardened Harrow Deck
-Nom: 
+Nom: Jeu du tourment renforcé
 État: auto-trad
 
 ------ Description (en) ------
@@ -9,8 +9,8 @@ Nom:
 <hr />
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">1</span> command, Interact; <strong>Effect</strong> All cards from the hardened harrow deck within 60 feet that you can see fly back into the deck.</p>
 ------ Description (fr) ------
-<p>La herse est un jeu de cartes traditionnel utilisé par les devins varisiens. Le jeu de la herse durcie est une version magique du jeu avec des cartes faites de fines plaques métalliques ornées de toutes les images communes aux jeux de la herse standard, mais avec des dessins plus angulaires. Vous pouvez lancer les cartes du jeu de herse durci comme des fléchettes de frappe supérieures de +2 avec le trait mortel d10. Une carte utilisée comme arme n’est pas détruite et peut être récupérée en 1 minute de recherche si elle ne peut pas être rappelée dans le paquet (voir l’entrée Activer du paquet ci-dessous). Cependant, s'il manque ne serait-ce qu'une seule carte dans le jeu, celui-ci ne peut pas être utilisé pour effectuer une lecture traditionnelle de la herse.</p>
+<p>Le jeu du tourment est un jeu de cartes traditionnel utilisé par les devins Varisiens. Le jeu du tourment renforcé est une version magique du jeu avec des cartes faites de fines plaques métalliques ornées de toutes les images communes aux jeux du tourment classiques, mais avec des dessins plus angulaires. Vous pouvez lancer les cartes du jeu du tourment renforcé comme des fléchettes de frappe supérieures +2 avec le trait Mortel d10. Une carte utilisée comme arme n’est pas détruite et peut être récupérée en 1 minute de recherche si elle ne peut pas être rappelée dans le paquet (voir l’entrée Activation du paquet ci-dessous). Cependant, s'il manque ne serait-ce qu'une seule carte dans le jeu, celui-ci ne peut pas être utilisé pour effectuer une lecture traditionnelle du tourment.</p>
 <hr />
-<p>Tant que vous portez plus de la moitié des cartes du jeu de herse endurcie, lorsque vous réussissez un jet de sauvegarde contre un effet de peur, vous obtenez un succès critique à la place ; si vous avez déjà une capacité qui ferait d'un jet de sauvegarde réussi contre un effet de peur un succès critique, vous gagnez à la place un bonus de circonstances de +1 aux jets de sauvegarde contre les effets de peur.</p>
+<p>Tant que vous portez plus de la moitié des cartes du jeu du tourment renforcé, lorsque vous réussissez un jet de sauvegarde contre un effet de peur, vous obtenez un succès critique à la place ; si vous avez déjà une capacité qui ferait d'un jet de sauvegarde contre un effet de peur réussi un succès critique, vous gagnez à la place un bonus de circonstances de +1 aux jets de sauvegarde contre les effets de peur.</p>
 <hr />
-<p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1. 8em ; display : inline;">1</span> commande, Interact ; <strong>Effet</strong> Toutes les cartes de la pioche de herse durcie situées dans un rayon de 60 pieds et que vous pouvez voir reviennent dans la pioche.</p>
+<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1. 8em ; display : inline;">1</span> Sur ordre, Interagir ; <strong>Effet</strong> Toutes les cartes du jeu du tourment renforcé situées dans un rayon de 18 mètres et que vous pouvez voir reviennent dans le paquet.</p>
