--- a/data/equipment/weapon-20-dh4FEXlA0FxTfnpY.htm
+++ b/data/equipment/weapon-20-dh4FEXlA0FxTfnpY.htm
@@ -1,6 +1,6 @@
 Name: Staff of Sieges
-Nom: 
-État: auto-trad
+Nom: Bâton de sièges
+État: libre
 
 ------ Description (en) ------
 <p>This adamantine staff is fitted with mithral plates resembling battlements on a castle. Lesser cover, cover, and greater cover don't grant any bonus against your spell attacks or to saving throws against your spells that you cast from the staff.</p>
@@ -38,37 +38,37 @@ Nom:
 </li>
 </ul>
 ------ Description (fr) ------
-<p>Ce bâton adamantin est muni de plaques de mithral ressemblant aux créneaux d'un château. Une couverture moindre, une couverture et une couverture plus grande ne confèrent aucun bonus à vos attaques de sorts ou aux jets de sauvegarde contre les sorts que vous lancez à partir du bâton.</p>
-<p><strong>Activate</strong> Cast a Spell;<strong>Effect</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p>Ce bâton en adamantium est muni de plaques de mithral ressemblant aux créneaux d'un château. Une couverture moindre, une couverture et une couverture plus grande ne confèrent aucun bonus contre vos attaques de sorts ou aux jets de sauvegarde contre les sorts que vous lancez à partir du bâton.</p>
+<p><strong>Activation</strong> Lancer un sort;<strong>Effect</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
 <li>
-<p><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.TVKNbcgTee19PXZR]{Bouclier}, @Compendium[pf2e.spells-srd.60sgbuMWN0268dB7]{Projectile télékinétique}</p>
+<p><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.TVKNbcgTee19PXZR]{Bouclier}, @Compendium[pf2e.spells-srd.60sgbuMWN0268dB7]{Projectile télékinésique}</p>
 </li>
 <li>
-<p><strong>1er</strong> @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Gust of Wind}, @Compendium[pf2e.spells-srd.KcLVELhCUcKXxiKE]{Longstrider}</p>
+<p><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Bourrasque}, @Compendium[pf2e.spells-srd.KcLVELhCUcKXxiKE]{Grande foulée}</p>
 </li>
 <li>
-<p><strong>2ème</strong> @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brouillard Obscurcissant}, @Compendium[pf2e.spells-srd.9s5tqqXNzcoKamWx]{Web}</p>
+<p><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation}, @Compendium[pf2e.spells-srd.9s5tqqXNzcoKamWx]{Toile d'araignée}</p>
 </li>
 <li>
-<p><strong>3e</strong> @Compendium[pf2e.spells-srd.sxQZ6yqTn0czJxVd]{Boule de feu}, @Compendium[pf2e.spells-srd.it4ZsAi6XgvGcodc]{Mur de vent}</p>
+<p><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.sxQZ6yqTn0czJxVd]{Boule de feu}, @Compendium[pf2e.spells-srd.it4ZsAi6XgvGcodc]{Mur de vent}</p>
 </li>
 <li>
-<p><strong>4e</strong> @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Terrain Hallucinatoire}, @Compendium[pf2e. spells-srd.piMJO6aYeDJbrhEo]{Brouillard Solide}, @Compendium[pf2e.spells-srd.IarZrgCeaiUqOuRu]{Mur de Feu}</p>
+<p><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.HBJPsonQnWcC3qdX]{Terrain hallucinatoire}, @Compendium[pf2e. spells-srd.piMJO6aYeDJbrhEo]{Brouillard dense}, @Compendium[pf2e.spells-srd.IarZrgCeaiUqOuRu]{Mur de Feu}</p>
 </li>
 <li>
-<p><strong>5e</strong> @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Cloudkill}, @Compendium[pf2e.spells-srd.kOa055FIrO9Smnya]{Mur de Pierre}</p>
+<p><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Nuage mortel}, @Compendium[pf2e.spells-srd.kOa055FIrO9Smnya]{Mur de Pierre}</p>
 </li>
 <li>
-<p><strong>6ème</strong> @Compendium[pf2e.spells-srd.sxQZ6yqTn0czJxVd]{Boule de feu}, @Compendium[pf2e.spells-srd.7Iela4GgVeO3LfAo]{Mur de Force}</p>
+<p><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.sxQZ6yqTn0czJxVd]{Boule de feu}, @Compendium[pf2e.spells-srd.7Iela4GgVeO3LfAo]{Mur de Force}</p>
 </li>
 <li>
-<p><strong>7ème</strong> @Compendium[pf2e.spells-srd.vPWMEyVTreMOoFnm]{Magnifique Manoir}, @Compendium[pf2e.spells-srd.d6o52BnjViNz7Gub]{Vaporisateur Prismatique}</p>
+<p><strong>Niveau 7</strong> @Compendium[pf2e.spells-srd.vPWMEyVTreMOoFnm]{Manoir somptueux}, @Compendium[pf2e.spells-srd.d6o52BnjViNz7Gub]{Rayon prismatique}</p>
 </li>
 <li>
-<p><strong>8ème</strong> @Compendium[pf2e.spells-srd.x7SPrsRxGb2Vy2nu]{Séisme}, @Compendium[pf2e.spells-srd.uEyfLoFQsRKBRIcB]{Motif Scintillant}</p>
+<p><strong>Niveau 8</strong> @Compendium[pf2e.spells-srd.x7SPrsRxGb2Vy2nu]{Tremblement de terre}, @Compendium[pf2e.spells-srd.uEyfLoFQsRKBRIcB]{Motif scintillant}</p>
 </li>
 <li>
-<p><strong>9ème</strong> @Compendium[pf2e.spells-srd.jrBa9deU2ULFWvSl]{Essaim de Météores}</p>
+<p><strong>Niveau 9</strong> @Compendium[pf2e.spells-srd.jrBa9deU2ULFWvSl]{Nuée de météores}</p>
 </li>
 </ul>
