--- a/data/equipment/weapon-25-o9IErbpmItz9NZT3.htm
+++ b/data/equipment/weapon-25-o9IErbpmItz9NZT3.htm
@@ -1,6 +1,6 @@
 Name: Blackaxe
-Nom: 
-État: auto-trad
+Nom: Noire-hache
+État: libre
 
 ------ Description (en) ------
 <p>This potent weapon used by Treerazer is a +4 @Compendium[pf2e.equipment-srd.vQUIUAFOTOWj3ohh]{Corrosive (Greater)} major striking obsidian greataxe that grants a +4 item bonus to attack rolls, deals an extra 2d6 damage to plants, and has the properties of adamantine.</p>
@@ -17,16 +17,16 @@ Nom:
 <p><strong>Frequency</strong> once per minute.</p>
 <p><strong>Effect</strong> Make a Strike against a living tree with <em>Blackaxe</em>. If it hits, the tree withers to ash and you heal 250 Hit Points and gain the benefit of @Compendium[pf2e.spells-srd.SnaLVgxZ9ryUFmUr]{Restoration} (6th) and @Compendium[pf2e.spells-srd.Et8RSCLx8w7uOLvo]{Restore Senses}.</p>
 ------ Description (fr) ------
-Cette arme puissante utilisée par Treerazer est une @Compendium[pf2e.equipment-srd.vQUIUAFOTOWj3ohh]{Corrosive (Greater)} great striking obsidian greataxe qui confère un bonus d'objet de +4 aux jets d'attaque, inflige 2d6 points de dégâts supplémentaires aux plantes et possède les propriétés de l'adamantine ;
+<p>Cette arme puissante utilisée par Treerazer est une grande hache en obsidienne de frappe supérieure@Compendium[pf2e.equipment-srd.vQUIUAFOTOWj3ohh]{Corrosive supérieure} qui confère un bonus d'objet de +4 aux jets d'attaque, inflige 2d6 points de dégâts supplémentaires aux plantes et possède les propriétés de l'adamantium ;
 <hr />
 <p><strong>Activer</strong><span class="pf2-icon">1</span> (divination, scrutation)</p>
-<p><strong>Conditions requises</strong> Vous ne maniez pas la <em>Blackaxe</em> et vous en êtes le véritable propriétaire.</p>
-<p><strong>Effet</strong> Vous percevez le monde autour de <em>Blackaxe</em> comme si vous vous trouviez à son emplacement et pouvez utiliser n'importe lequel de vos sorts innés par le biais du lien comme s'il s'agissait de la source du sort. Si une autre créature brandit Blackaxe, elle doit réussir une sauvegarde de Volonté DC 50 ou être @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{soufflée 2} jusqu'à ce qu'elle renonce à l'arme.</p>
+<p><strong>Conditions requises</strong> Vous ne maniez pas Noire-hache et vous en êtes le véritable propriétaire.</p>
+<p><strong>Effet</strong> Vous percevez le monde autour de Noire-hache comme si vous vous trouviez à son emplacement et pouvez utiliser n'importe lequel de vos sorts innés par le biais du lien comme s'il s'agissait de la source du sort. Si une autre créature brandit Noire-hache, elle doit réussir un jet de sauvegarde de Volonté DD 50 ou être @Compendium[pf2e.conditionitems.xYTAsEpcJE1Ccni3]{Ralentie 2} jusqu'à ce qu'elle renonce à l'arme.</p>
 <hr />
 <p><strong>Activer</strong><span class="pf2-icon">f</span> commande (conjuration, téléportation)</p>
-<p><strong>Conditions requises</strong> Vous ne maniez pas la <em>Blackaxe</em> et vous en êtes le véritable propriétaire.</p>
-<p><strong>Effet</strong> <em>Blackaxe</em> apparaît dans vos mains, se téléportant instantanément de son emplacement précédent.</p>
+<p><strong>Conditions requises</strong> Vous ne maniez pas Noire-hache et vous en êtes le véritable propriétaire.</p>
+<p><strong>Effet</strong> Noire-hache apparaît dans vos mains, se téléportant instantanément de son emplacement précédent.</p>
 <hr />
 <p><strong>Activer</strong><span class="pf2-icon">1</span> commande (mort, guérison, nécromancie)</p>
 <p><strong>Fréquence</strong> une fois par minute.</p>
-<p><strong>Effet</strong> Effectuez une frappe contre un arbre vivant avec <em>Blackaxe</em>. S'il est touché, l'arbre se fane en cendres et vous récupérez 250 points de vie et gagnez le bénéfice de @Compendium[pf2e.spells-srd.SnaLVgxZ9ryUFmUr]{Restauration} (6ème) et @Compendium[pf2e.spells-srd.Et8RSCLx8w7uOLvo]{Restauration des sens}.</p>
+<p><strong>Effet</strong> Effectuez une frappe contre un arbre vivant avec Noire-hache. S'il est touché, l'arbre tombe en cendres et vous récupérez 250 points de vie et gagnez le bénéfice de @Compendium[pf2e.spells-srd.SnaLVgxZ9ryUFmUr]{Restauration} niveau 6 et de @Compendium[pf2e.spells-srd.Et8RSCLx8w7uOLvo]{Restaurer les sens}.</p>
