--- a/data/equipment/weapon-07-USzeQdvsXz6P5L2k.htm
+++ b/data/equipment/weapon-07-USzeQdvsXz6P5L2k.htm
@@ -11,6 +11,6 @@ Nom: Fouet gluant
 ------ Description (fr) ------
 <p>Cet épais et graisseux fouet de frappe Changeant +1 est fabriqué à partir d'un pseudopode gluant. Vous ne subissez pas le malus de circonstance habituel de -2 à vos jets d'attaque lorsque vous utilisez le fouet gluant pour effectuer une attaque létale. La forme du fouet peut être changée comme n'importe quelle arme dotée de la rune changeante, mais il reprend sa forme initiale dès qu'il n'est plus manié. Lorsqu'il est sous la forme d'un fouet, vous pouvez effectuer les actions suivantes : </p>
 <hr />
-<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> commande, Interagir;</p>
+<p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">1</span> Sur ordre, Interagir;</p>
 <p><strong>Fréquence</strong> une fois par heure;</p>
 <p><strong>Effet</strong> Pendant 1 round, le fouet gluant inflige des dégâts d'acide plutôt que des dégâts de coupe. Si l'attaque inflige des dégâts persistants, ces derniers sont également des dégâts d'acide au lieu de leur type habituel.</p>
