--- a/data/equipment/weapon-08-8No84rsBOCVCkXJK.htm
+++ b/data/equipment/weapon-08-8No84rsBOCVCkXJK.htm
@@ -13,7 +13,7 @@ Nom: Bâton d'illumination
 </ul>
 <p><br /><strong>Craft Requirements</strong> Supply one casting of all listed levels of all listed spells.</p>
 ------ Description (fr) ------
-<p><span>Une pierre précieuse à facettes transparente orne l'extrémité de ce bâton de fer simple.<br /></span></p>
+<p><span>Une pierre précieuse à facettes transparente orne l'extrémité de ce simple bâton de fer.<br /></span></p>
 <p><span><strong>Activation</strong> Interagir ; <strong>Effet</strong> La pierre précieuse au sommet du bâton luit comme une torche, en diffusant une lumière vive dans un rayon de 6 mètres (et une lumière faible 6 mètres au-delà) pendant 10 minutes.<br /></span></p>
 <p><span><strong>Activation</strong> Lancer un sort ; <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</span></p>
 <ul>
