--- a/data/equipment/weapon-11-ud3pqCquYA5UecaS.htm
+++ b/data/equipment/weapon-11-ud3pqCquYA5UecaS.htm
@@ -13,7 +13,7 @@ Nom: Javelot dresseur de pierres
 <p>Any creature in the area when the stalagmites appear is pushed to the nearest unoccupied space of its choice; this movement is forced movement. Pushed creatures must attempt a DC 28 Reflex saving throw or take [[/r 4d4]] piercing damage.</p>
 <p><strong>Critical Success</strong> The creature is unaffected.<br /><strong>Success</strong> The creature takes half damage.<br /><strong>Failure</strong> The creature takes full damage.<br /><strong>Critical Failure</strong> The creature takes double damage and is knocked prone.</p>
 ------ Description (fr) ------
-<p>Ce javelot de frappe +2 à tête de pierre puise dans la puissance de la terre elle-même pour frapper ses ennemis.</p>
+<p>Ce javelot de frappe +2 à tête de pierre puise dans la puissance de la terre pour frapper ses ennemis.</p>
 <p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">A</span> Interagir</p>
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Effet</strong> Vous lancez le Javelot dresseur de pierres sur un espace inoccupé situé dans un rayon de 9 mètres</p>
@@ -21,4 +21,7 @@ Nom: Javelot dresseur de pierres
 <p>Tout ce qui se trouve de chaque côté des stalagmites est à couvert des créatures du côté opposé, et les espaces entre les stalagmites sont du terrain difficile. Une créature subit [[/r 4d4]] dégâts perforants pour chaque action de mouvement qu'elle entreprend en pénétrant dans au moins un des espaces affectés.</p>
 <p>Chaque section de 1,5 mètres sur 1,5 mètres a une CA de 10, une solidité de 14 et 30 points de vie. Elle est immunisée contre les coups critiques et les dégâts de précision. On peut se déplacer librement dans une section détruite. Les stalagmites se réduisent en poussière au bout d'une minute.</p>
 <p>Toute créature se trouvant dans la zone lorsque les stalagmites apparaissent est poussée vers l'espace inoccupé le plus proche de son choix ; ce mouvement est un mouvement forcé. Les créatures poussées doivent tenter un jet de sauvegarde de Réflexes DD 28 ou subir [[/r 4d4]] dégâts perforants.</p>
-<p><strong>Succès critique</strong> la créature n'est pas affectée.<br /><strong>Succès</strong> la créature subit la moitié des dégâts. <br /><strong>Échec</strong> La créature subit la totalité des dégats.<br /><strong>Échec critique</strong> La créature subit ldes dégats doublés et tombe à terre.</p>
+<p><strong>Succès critique</strong> la créature n'est pas affectée.</p>
+<p><strong>Succès</strong> la créature subit la moitié des dégâts. </p>
+<p><strong>Échec</strong> La créature subit la totalité des dégâts.</p>
+<p><strong>Échec critique</strong> La créature subit des dégâts doublés et tombe à terre.</p>
