--- a/data/equipment/weapon-14-gca5Pgt9Pg8G23VA.htm
+++ b/data/equipment/weapon-14-gca5Pgt9Pg8G23VA.htm
@@ -1,5 +1,5 @@
 Name: Staff of Nature's Vengeance (Greater)
-Nom: Bâton de vengeance de la nature supérieur
+Nom: Bâton de Vengeance de la nature (supérieur)
 État: libre
 
 ------ Description (en) ------
@@ -17,7 +17,7 @@ Nom: Bâton de vengeance de la nature supérieur
 <li><strong>6th</strong> @Compendium[pf2e.spells-srd.ayRXv0wQH00TTNZe]{Purple Worm Sting}, @Compendium[pf2e.spells-srd.JbAcSLu62TU1OgNF]{Tangling Creepers}</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de la vengeance de la nature a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
+<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de Vengeance de la nature a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
 <p><strong>Activation</strong> Lancer un sort;</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste;</p>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
