--- a/data/equipment/weapon-12-ED3By5mICaJeiQYo.htm
+++ b/data/equipment/weapon-12-ED3By5mICaJeiQYo.htm
@@ -22,7 +22,7 @@ Nom: Bâton du désert noir
 </ul>
 ------ Description (fr) ------
 <p>Ce bâton en métal brut est piqué et sablé, et des milliers de cristaux de sable quasi-imperceptibles sont incrustés sur sa surface.</p>
-<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres.</p>
+<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des Terres sombres.</p>
 <p><strong>Activation</strong> Lancer un sort</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
@@ -37,5 +37,5 @@ Nom: Bâton du désert noir
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
-<li>Bonus de circonstances de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres</li>
+<li>Bonus de circonstances de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des Terres sombres</li>
 </ul>
