--- a/data/equipment/weapon-13-ZuyzSxmg4QdnZqLy.htm
+++ b/data/equipment/weapon-13-ZuyzSxmg4QdnZqLy.htm
@@ -21,4 +21,4 @@ Nom: Ankylostern
 <p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">D</span> Sur ordre Interagir</p>
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Conditions</strong> L'Ankylostern est sous sa forme de Massue</p>
-<p><strong>Effet</strong> L'Ankylostern s'allonge tandis que vous faites de grands arcs avec la massue. Vous frappez jusqu'à trois créatures dans un cône de 4,5 mètres ; cela compte comme une attaque pour le calcul de votre pénalité d'attaque multiple. Vous pouvez également pousser jusqu'à trois créatures dans un cône de 4,5 mètres, en effectuant un test d'Athlétisme distinct pour chaque créature ;
+<p><strong>Effet</strong> L'Ankylostern s'allonge tandis que vous faites de grands arcs avec la massue. Vous frappez jusqu'à trois créatures dans un cône de 4,5 mètres ; cela compte comme une attaque pour le calcul de votre pénalité d'attaque multiple. Vous pouvez également pousser jusqu'à trois créatures dans un cône de 4,5 mètres, en effectuant un test d'Athlétisme distinct pour chaque créature.</p>
