--- a/data/equipment/weapon-14-7aLpTxRVmoNQTqvJ.htm
+++ b/data/equipment/weapon-14-7aLpTxRVmoNQTqvJ.htm
@@ -1,5 +1,5 @@
 Name: Staff of Conjuration (Major)
-Nom: Bâton d'invocation majeur
+Nom: Bâton d'invocation (majeur)
 État: auto-trad
 
 ------ Description (en) ------
