--- a/data/equipment/weapon-16-Ri09KBg9DG0aapLw.htm
+++ b/data/equipment/weapon-16-Ri09KBg9DG0aapLw.htm
@@ -1,5 +1,5 @@
 Name: Staff of the Black Desert (Greater)
-Nom: 
+Nom:  Bâton du Désert noir (supérieur)
 État: auto-trad
 
 ------ Description (en) ------
@@ -24,7 +24,7 @@ Nom:
 </ul>
 ------ Description (fr) ------
 <p>Ce bâton en métal brut est piqué et sablé, et des milliers de cristaux de sable quasi-imperceptibles sont incrustés sur sa surface.</p>
-<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres.</p>
+<p>Lorsque vous portez ce bâton, vous bénéficiez d'un bonus de circonstance de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des Terres sombres.</p>
 <p><strong>Activation</strong> Lancer un sort</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
 <ul>
@@ -41,5 +41,5 @@ Nom:
 <hr />
 <p>Effets appliqués automatiquement:</p>
 <ul>
-<li>Bonus de circonstances de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des terres sombres</li>
+<li>Bonus de circonstances de +2 aux tests d'Occultisme pour identifier les aberrations et les vases originaires des Terres sombres</li>
 </ul>
