--- a/data/equipment/weapon-18-1gi4mdZYNgPrzWHc.htm
+++ b/data/equipment/weapon-18-1gi4mdZYNgPrzWHc.htm
@@ -16,13 +16,13 @@ Nom: Le Dernier souffle de vie
 <p><strong>Trigger</strong> You successfully Strike a creature with <em>Life's Last Breath</em></p>
 <p><strong>Effect</strong> The target must succeed at a DD 38 Fortitude save or take [[/r 4d6]] negative damage; you gain an equal amount of temporary Hit Points that last 1 minute.</p>
 ------ Description (fr) ------
-<p>Les deux lames dentelées de cette légendaire épée Rhoka sont d'un noir mat et dégoulinent constamment de sang. On dit que le Dernier souffle de vie a été forgée il y a des siècles pour un général Urdefhan inconnu et qu'elle est depuis tombée entre les mains d'innombrables autres puissants seigneurs de guerre Urdefhan.</p>
+<p>Les deux lames dentelées de cette légendaire épée Rhoka sont d'un noir mat qui dégoulinent constamment de sang. On dit que le Dernier souffle de vie a été forgée il y a des siècles pour un général Urdefhan inconnu et qu'elle est depuis tombée entre les mains d'innombrables autres puissants seigneurs de guerre Urdefhan.</p>
 <p>Le Dernier souffle de vie est une épée de frappe supérieure @Compendium[pf2e.equipment-srd.gmMrJREf4JSHd2dZ]{Impie} @Compendium[pf2e.equipment-srd.fo6Yhq5mbQXsnZs0]{Sanglante} +3 Rhoka avec les capacités spéciales suivantes ;
 <hr />
 <p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">R</span> Sur ordre</p>
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Conditions</strong> Vous frappez avec succès une créature avec le Dernier souffle de vie</p>
-<p><strong>Effet</strong> Vous lancez un sort @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralysé de niveau 9 sur la cible.</p>
+<p><strong>Effet</strong> Vous lancez un sort @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralysé} de niveau 9 sur la cible.</p>
 <hr />
 <p><strong>Activation</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">R</span> Imaginer</p>
 <p><strong>Fréquence</strong> une fois toutes les 10 minutes</p>
