--- a/data/equipment/weapon-18-hnx3dOQrYLBtsu3V.htm
+++ b/data/equipment/weapon-18-hnx3dOQrYLBtsu3V.htm
@@ -1,5 +1,5 @@
 Name: Staff of Nature's Vengeance (Major)
-Nom: Bâton de la vengeance de la nature majeur
+Nom: Bâton de Vengeance de la nature (majeur)
 État: libre
 
 ------ Description (en) ------
