--- a/data/equipment/weapon-18-hnx3dOQrYLBtsu3V.htm
+++ b/data/equipment/weapon-18-hnx3dOQrYLBtsu3V.htm
@@ -19,7 +19,7 @@ Nom: Bâton de Vengeance de la nature (majeur)
 <li><strong>8th</strong> @Compendium[pf2e.spells-srd.x7SPrsRxGb2Vy2nu]{Earthquake}, @Compendium[pf2e.spells-srd.wi405lBjPcbF1DeR]{Punishing Winds}</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de la vengeance de la nature a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
+<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de Vengeance de la nature a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
 <p><strong>Activation</strong> Lancer un sort;</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste;</p>
 <p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
