Traduction de 10 Equipements

--- a/data/equipment/equipment-00-4QufuSeCbjDD2hMa.htm
+++ b/data/equipment/equipment-00-4QufuSeCbjDD2hMa.htm
@@ -1,8 +1,8 @@
 Name: Comealong
-Nom: 
-État: auto-trad
+Nom: Treuil manuel
+État: libre
 
 ------ Description (en) ------
 <p>This portable winch consists of a length of cable or chain, two hooks, and a ratcheting drum with a handle. When used with two sections of rope or chain, it allows you to pull a heavy load along a flat surface.</p>
 ------ Description (fr) ------
-<p>Ce treuil portable se compose d'une longueur de câble ou de chaîne, de deux crochets et d'un tambour à cliquet avec une poignée. Lorsqu'il est utilisé avec deux sections de câble ou de chaîne, il vous permet de tirer une lourde charge le long d'une surface plane.</p>
+<p>Ce treuil portable se compose d'un câble (ou d'une chaîne), de deux crochets et d'un tambour à cliquet actionné par une manivelle qui permet d'enrouler ou de dérouler le cable. En fixant les deux extrémités du câble, il vous permet de tracter une lourde charge.</p>
