--- a/data/equipment/equipment-00-OP1TkZ9ugn86W4Br.htm
+++ b/data/equipment/equipment-00-OP1TkZ9ugn86W4Br.htm
@@ -1,12 +1,12 @@
 Name: Harrow Deck (Fine)
-Nom: 
-État: auto-trad
+Nom: Jeu de carte du Tourment (Beau)
+État: libre
 
 ------ Description (en) ------
 <p>Used by gamblers and seers alike, this deck of cards comes in several varieties.</p>
 <hr />
 <p>Fine harrow decks are made from a variety of materials, such as high-quality paper, woods, bone, ivory, or metal.</p>
 ------ Description (fr) ------
-Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés ;
+<p>Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
-<p>Les jeux de herse fins sont fabriqués à partir de divers matériaux, tels que le papier de haute qualité, le bois, l'os, l'ivoire ou le métal.</p>
+<p>Les <em>jeux de carte du Tourment (beaux)</em> sont fabriqués à partir de divers matériaux, tels que le papier de haute qualité, le bois, l'os, l'ivoire ou le métal.</p>
