--- a/data/equipment/equipment-00-B3aJa0csNZOGXLXT.htm
+++ b/data/equipment/equipment-00-B3aJa0csNZOGXLXT.htm
@@ -1,12 +1,12 @@
 Name: Harrow Deck (Common)
-Nom: 
-État: auto-trad
+Nom: Jeu de carte du Tourment (Commun)
+État: libre
 
 ------ Description (en) ------
 <p>Used by gamblers and seers alike, this deck of cards comes in several varieties.</p>
 <hr />
 <p>Common harrow decks are made from higher-quality paper and feature illustrations-harrow readers typically use these decks.</p>
 ------ Description (fr) ------
-Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés ;
+<p>Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
-<p>Les jeux de herse courants sont fabriqués à partir d'un papier de meilleure qualité et comportent des illustrations - les lecteurs de herse utilisent généralement ces jeux.</p>
+<p>Les <em>jeux de carte du Tourment (communs)</em> sont fabriqués à partir d'un papier de meilleure qualité et comportent des illustrations. Les liseurs du Tourment utilisent généralement ces jeux.</p>
