--- a/data/equipment/equipment-00-C1j0Zs26TPVjplbs.htm
+++ b/data/equipment/equipment-00-C1j0Zs26TPVjplbs.htm
@@ -1,12 +1,12 @@
 Name: Harrow Deck (Simple)
-Nom: 
-État: auto-trad
+Nom: Jeu de carte du Tourment (Simple)
+État: libre
 
 ------ Description (en) ------
 <p>Used by gamblers and seers alike, this deck of cards comes in several varieties.</p>
 <hr />
 <p>Simple harrow decks are made from low-quality paper and typically have only an icon and a number to signify the suit and alignment. These simple decks are mostly used for games of chance, as the actual image and significance of the cards are irrelevant for such games.</p>
 ------ Description (fr) ------
-Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés ;
+<p>Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
-<p>Les jeux de herse simples sont fabriqués à partir de papier de faible qualité et ne comportent généralement qu'une icône et un chiffre pour signifier la couleur et l'alignement. Ces jeux simples sont surtout utilisés pour les jeux de hasard, car l'image réelle et la signification des cartes n'ont pas d'importance pour ces jeux.</p>
+<p>Les <em>jeux de carte du Tourment (simples)</em> sont fabriqués à partir de papier de faible qualité et ne comportent généralement qu'une icône et un chiffre pour signifier la couleur et l'alignement. Ces jeux simples sont surtout utilisés pour les jeux de hasard, car l'image réelle et la signification des cartes n'ont pas d'importance pour ces jeux.</p>
