--- a/data/equipment/equipment-00-Ze64YjceQqnwRCsU.htm
+++ b/data/equipment/equipment-00-Ze64YjceQqnwRCsU.htm
@@ -1,8 +1,8 @@
 Name: Harrow Mat
-Nom: 
-État: auto-trad
+Nom: Tapis de cartes du Tourment
+État: libre
 
 ------ Description (en) ------
 <p>This leather mat bears intricate designs and symbols embossed into them to enhance the mystique of a harrow reading. The mat provides a +1 item bonus to Deception, Diplomacy, and relevant Lore checks (such as Fortune-Telling Lore or Harrow Lore) to convince a creature that a harrow reading was accurate.</p>
 ------ Description (fr) ------
-<p>Ce tapis de cuir est orné de motifs et de symboles complexes qui renforcent le caractère mystique d'une lecture de herse. Le tapis confère un bonus d'objet de +1 aux tests de tromperie, de diplomatie et de connaissances pertinentes (telles que les connaissances sur la divination ou la herse) pour convaincre une créature qu'une lecture de la herse était exacte.</p>
+<p>Ce tapis de cuir est orné de motifs et de symboles complexes qui renforcent le caractère mystique d'une lecture du Tourment. Le tapis confère un bonus d'objet de +1 aux tests de Duperie, de Diplomatie et aux tests de Connaissances pertinentes (telles que les connaissances sur la divination ou le Tourment) pour convaincre une créature qu'une lecture du Tourment était exacte.</p>
