--- a/data/equipment/equipment-00-OP1TkZ9ugn86W4Br.htm
+++ b/data/equipment/equipment-00-OP1TkZ9ugn86W4Br.htm
@@ -7,6 +7,6 @@ Nom: Jeu de carte du Tourment (Beau)
 <hr />
 <p>Fine harrow decks are made from a variety of materials, such as high-quality paper, woods, bone, ivory, or metal.</p>
 ------ Description (fr) ------
-<p>Utilisé par les joueurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
+<p>Utilisé par les parieurs et les voyants, ce jeu de cartes existe en plusieurs variétés.</p>
 <hr />
 <p>Les <em>jeux de carte du Tourment (beaux)</em> sont fabriqués à partir de divers matériaux, tels que le papier de haute qualité, le bois, l'os, l'ivoire ou le métal.</p>
