--- a/data/feats/ancestry-01-liqDAd5xk2b3xzeE.htm
+++ b/data/feats/ancestry-01-liqDAd5xk2b3xzeE.htm
@@ -21,7 +21,7 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie Shoanti</p>
 <hr />
-<p>Vous avez grandi parmi les tribus Shoanti, avec les esprits veillant sur vous et ils vous ont offert leurs conseils. Vous devenez qualifié dans la compétence listée pour votre quah (ou une autre compétence de votre choix, si vous êtes déjà qualifié dans cette compétence). Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.W6Gl9ePmItfDHji0]{Assurance} dans cette compétence, parce que l'aide des esprits guident vos actions.</p>
+<p>Vous avez grandi parmi les tribus Shoanti, avec les esprits veillent sur vous et ils vous offrent leurs conseils. Vous devenez qualifié dans la compétence listée pour votre quah (ou une autre compétence de votre choix, si vous êtes déjà qualifié dans cette compétence). Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.W6Gl9ePmItfDHji0]{Assurance} dans cette compétence, parce que l'aide des esprits guident vos actions.</p>
 <ul>
 <li><strong>Lyrune-Quah</strong> Religion</li>
 <li><strong>Shadde-Quah</strong> Athlétisme</li>
