Reformatage capacités de classe alchimiste

--- a/data/classfeatures/alchemist-11-VS5vkqUQu4n7E28Y.htm
+++ b/data/classfeatures/alchemist-11-VS5vkqUQu4n7E28Y.htm
@@ -1,9 +1,8 @@
 Name: Perpetual Potency (Chirurgeon)
 Nom: Efficacité perpétuelle (Chirurgien)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Moderate antidote and antiplague.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Antidote et anti-maladie moyens.&nbsp;</span></p>
+<p>Antidote et anti-maladie modérés.</p>
