--- a/data/classfeatures/alchemist-11-mZFqRLYOQEqKA8ri.htm
+++ b/data/classfeatures/alchemist-11-mZFqRLYOQEqKA8ri.htm
@@ -1,9 +1,8 @@
 Name: Perpetual Potency (Mutagenist)
 Nom: Efficacité perpétuelle (Mutagèniste)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The moderate versions of the mutagens you chose for perpetual infusions.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">La version moyenne des mutagènes que vous avez choisis pour vos infusions perpétuelles.&nbsp;</span></p>
+<p>La version moyenne des mutagènes que vous avez choisis pour vos infusions perpétuelles.</p>
