--- a/data/classfeatures/alchemist-17-YByJ9O7oe8wxfbqs.htm
+++ b/data/classfeatures/alchemist-17-YByJ9O7oe8wxfbqs.htm
@@ -1,9 +1,8 @@
 Name: Perpetual Perfection (Chirurgeon)
 Nom: Perfection perpétuelle (Chirurgien)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Greater antidote and antiplague.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Antidote et anti-maladie supérieurs.&nbsp;</span></p>
+<p>Antidote et anti-maladie supérieurs.</p>
