--- a/data/classfeatures/alchemist-17-xO90iBD8XNGyaCkz.htm
+++ b/data/classfeatures/alchemist-17-xO90iBD8XNGyaCkz.htm
@@ -1,9 +1,8 @@
 Name: Perpetual Perfection (Bomber)
 Nom: Perfection perpétuelle (Artificier)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The greater versions of the bombs you chose for perpetual infusions.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">La version supérieure des bombes que vous avez choisies pour vos infusions perpétuelles..&nbsp;</span></p>
+<p>La version supérieure des bombes que vous avez choisies pour vos infusions perpétuelles.</p>
