--- a/data/classfeatures/alchemist-05-V4Jt7eDnJBLv5bDj.htm
+++ b/data/classfeatures/alchemist-05-V4Jt7eDnJBLv5bDj.htm
@@ -1,9 +1,8 @@
 Name: Field Discovery (Mutagenist)
 Nom: Découverte de domaine de recherche (Mutagèniste)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When using advanced alchemy to make mutagens during your daily preparations, you can use a batch of reagents to create any three mutagens instead of just two of the same mutagen.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput"> Quand vous utilisez alchimie avancée pour faire des mutagènes lors de vos préparatifs quotidiens, vous pouvez utiliser un lot de réactifs pour créer trois mutagènes de n’importe quel type au lieu de deux mutagènes d’un seul type.&nbsp;</span></p>
+<p>Quand vous utilisez alchimie avancée pour faire des mutagènes lors de vos préparatifs quotidiens, vous pouvez utiliser un lot de réactifs pour créer trois mutagènes de n’importe quel type au lieu de deux mutagènes d’un seul type.</p>
