--- a/data/classfeatures/alchemist-07-DFQDtT1Van4fFEHi.htm
+++ b/data/classfeatures/alchemist-07-DFQDtT1Van4fFEHi.htm
@@ -1,7 +1,6 @@
 Name: Perpetual Infusions (Bomber)
 Nom: Infusions perpétuelles (Artificier)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have learned how to create perpetual alchemical infusions that can provide a near-infinite supply of certain simple items. You gain the ability to create two 1st-level alchemical items using Quick Alchemy without spending a batch of infused reagents. The items you can select depend on your research field and must be in your formula book.</p>
@@ -16,6 +15,8 @@ Nom: Infusions perpétuelles (Artificier)
 <li>@Compendium[pf2e.equipment-srd.Xnqglykl3Cif8rN9]{Thunderstone (Lesser)}.</li>
 </ul>
 ------ Description (fr) ------
+<p>Vous avez appris à créer des infusions alchimiques perpétuelles qui vous permettent d’avoir accès à une réserve presque infinie de certains objets simples. Vous gagnez la capacité de créer deux objets alchimiques de niveau 1 en utilisant Alchimie rapide, sans avoir à dépenser un lot de réactifs imprégnés. Les objets que vous pouvez choisir dépendent de votre domaine de recherche et doivent se trouver dans votre formulaire.</p>
+<hr />
 <p>Choisissez deux formules parmi les suivantes :</p>
 <ul>
 <li>@Compendium[pf2e.equipment-srd.yd3kEK21YknZLlcT]{feu grégeois (inférieur)},</li>
