--- a/data/classfeatures/alchemist-07-Dug1oaVYejLmYEFt.htm
+++ b/data/classfeatures/alchemist-07-Dug1oaVYejLmYEFt.htm
@@ -1,7 +1,6 @@
 Name: Perpetual Infusions (Mutagenist)
 Nom: Infusions perpétuelles (Mutagèniste)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have learned how to create perpetual alchemical infusions that can provide a near-infinite supply of certain simple items. You gain the ability to create two 1st-level alchemical items using Quick Alchemy without spending a batch of infused reagents. The items you can select depend on your research field and must be in your formula book.</p>
@@ -16,4 +15,14 @@ Nom: Infusions perpétuelles (Mutagèniste)
 <li>@Compendium[pf2e.equipment-srd.YwRAHWW8yUI07sy9]{Silvertongue Mutagen (Lesser)}</li>
 </ul>
 ------ Description (fr) ------
-<p>Choisissez deux formules parmi les suivantes : @Compendium[pf2e.equipment-srd.ZR1TnC34ohP5nROX]{mutagène bestial (inférieur)}, @Compendium[pf2e.equipment-srd.zrcJMKdwxSKxxLEG]{mutagène cognitif (inférieur)}, @Compendium[pf2e.equipment-srd.iDgo3OfnikwNGyfo]{mutagène de juggernaut (inférieur)}, @Compendium[pf2e.equipment-srd.ChFYb3A94KNByRui]{mutagène de vif-argent (inférieur)}, @Compendium[pf2e.equipment-srd.bOPQDM54W8ZDoULY]{Mutagène de sérénité (inférieur)}, @Compendium[pf2e.equipment-srd.5fnEOtROEy2hkzDG]{langue dorée (inférieur)}.</p>
+<p>Vous avez appris à créer des infusions alchimiques perpétuelles qui vous permettent d’avoir accès à une réserve presque infinie de certains objets simples. Vous gagnez la capacité de créer deux objets alchimiques de niveau 1 en utilisant Alchimie rapide, sans avoir à dépenser un lot de réactifs imprégnés. Les objets que vous pouvez choisir dépendent de votre domaine de recherche et doivent se trouver dans votre formulaire.</p>
+<hr />
+<p>Choisissez deux formules parmi les suivantes :</p>
+<ul>
+<li>@Compendium[pf2e.equipment-srd.ZR1TnC34ohP5nROX]{mutagène bestial (inférieur)},</li>
+<li>@Compendium[pf2e.equipment-srd.zrcJMKdwxSKxxLEG]{mutagène cognitif (inférieur)},</li> 
+<li>@Compendium[pf2e.equipment-srd.iDgo3OfnikwNGyfo]{mutagène de juggernaut (inférieur)},</li> 
+<li>@Compendium[pf2e.equipment-srd.ChFYb3A94KNByRui]{mutagène de vif-argent (inférieur)},</li> 
+<li>@Compendium[pf2e.equipment-srd.bOPQDM54W8ZDoULY]{Mutagène de sérénité (inférieur)},</li> 
+<li>@Compendium[pf2e.equipment-srd.5fnEOtROEy2hkzDG]{Mutagène de langue dorée (inférieur)}.</li> 
+</ul>
