--- a/data/classfeatures/alchemist-07-LlZ5R50z9j8jysZL.htm
+++ b/data/classfeatures/alchemist-07-LlZ5R50z9j8jysZL.htm
@@ -1,11 +1,12 @@
 Name: Perpetual Infusions (Toxicologist)
 Nom: Infusions perpétuelles (Toxicologiste)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><span style="color: #191813; font-family: Roboto, system, -apple-system, sans-serif; font-size: 13px;">You have learned how to create perpetual alchemical infusions that can provide a near-infinite supply of certain simple items. You gain the ability to create two 1st-level alchemical items using Quick Alchemy without spending a batch of infused reagents. The items you can select depend on your research field and must be in your formula book.</span></p>
 <hr />
 <p><span style="color: #191813; font-family: Roboto, system, -apple-system, sans-serif; font-size: 13px;">Choose two common 1st-level alchemical poisons.</span></p>
 ------ Description (fr) ------
+<p>Vous avez appris à créer des infusions alchimiques perpétuelles qui vous permettent d’avoir accès à une réserve presque infinie de certains objets simples. Vous gagnez la capacité de créer deux objets alchimiques de niveau 1 en utilisant Alchimie rapide, sans avoir à dépenser un lot de réactifs imprégnés. Les objets que vous pouvez choisir dépendent de votre domaine de recherche et doivent se trouver dans votre formulaire.</p>
+<hr />
 <p>Choisissez deux poisons alchimiques courants de niveau 1.</p>
