--- a/data/classfeatures/alchemist-07-fzvIe6FwwCuIdnjX.htm
+++ b/data/classfeatures/alchemist-07-fzvIe6FwwCuIdnjX.htm
@@ -1,11 +1,12 @@
 Name: Perpetual Infusions (Chirurgeon)
 Nom: Infusions perpétuelles (Chirurgien)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You have learned how to create perpetual alchemical infusions that can provide a near-infinite supply of certain simple items. You gain the ability to create two 1st-level alchemical items using Quick Alchemy without spending a batch of infused reagents. The items you can select depend on your research field and must be in your formula book.</p>
 <hr />
 <p>@Compendium[pf2e.equipment-srd.ktjFOp3U0wQD9t0Z]{Lesser Antidote} and @Compendium[pf2e.equipment-srd.UqinuuCWePTYGhVO]{Lesser Antiplague}.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Antidote inférieur et anti-maladie inférieur.&nbsp;</span></p>
+<p>Vous avez appris à créer des infusions alchimiques perpétuelles qui vous permettent d’avoir accès à une réserve presque infinie de certains objets simples. Vous gagnez la capacité de créer deux objets alchimiques de niveau 1 en utilisant Alchimie rapide, sans avoir à dépenser un lot de réactifs imprégnés. Les objets que vous pouvez choisir dépendent de votre domaine de recherche et doivent se trouver dans votre formulaire.</p>
+<hr />
+<p>@Compendium[pf2e.equipment-srd.ktjFOp3U0wQD9t0Z]{Antidote inférieur} et @Compendium[pf2e.equipment-srd.UqinuuCWePTYGhVO]{anti-maladie inférieur}.</p>
