--- a/data/classfeatures/alchemist-09-3e1PlMXmlSwKoc6d.htm
+++ b/data/classfeatures/alchemist-09-3e1PlMXmlSwKoc6d.htm
@@ -1,9 +1,8 @@
 Name: Alchemical Expertise
 Nom: Expertise alchimique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Constant practice has increased the effectiveness of your concoctions. Your proficiency rank for your alchemist class DC increases to expert.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">À force d’utiliser l’alchimie, vous avez appris à créer des décoctions plus efficaces. Votre rang de maîtrise dans le DD de classe alchimiste devient expert.&nbsp;</span></p>
+<p>À force d’utiliser l’alchimie, vous avez appris à créer des décoctions plus efficaces. Votre rang de maîtrise dans le DD de la classe d'alchimiste devient expert.</p>
