--- a/data/classfeatures/alchemist-11-JOdbVu14phvdjhaY.htm
+++ b/data/classfeatures/alchemist-11-JOdbVu14phvdjhaY.htm
@@ -5,4 +5,4 @@ Nom: Efficacité perpétuelle (Toxicologiste)
 ------ Description (en) ------
 <p><span style="color: #191813; font-family: Roboto, system, -apple-system, sans-serif; font-size: 13px;">Choose two common 5th-level or lower alchemical poisons.</span></p>
 ------ Description (fr) ------
-<p>Choisissez deux poisons courants de niveau 5 ou inférieur.</span></p>
+<p>Choisissez deux poisons courants de niveau 5 ou inférieur.</p>
