--- a/data/classfeatures/alchemist-13-RGs4uR3CAvgbtBAA.htm
+++ b/data/classfeatures/alchemist-13-RGs4uR3CAvgbtBAA.htm
@@ -1,7 +1,6 @@
 Name: Greater Field Discovery (Bomber)
 Nom: Découverte de domaine de recherche supérieure (Artificier)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You can increase the splash on your bombs to damage creatures within 10 feet, or 15 feet if you have Expanded Splash.</p>
