--- a/data/classfeatures/alchemist-17-CGetAmSbv06fW7GT.htm
+++ b/data/classfeatures/alchemist-17-CGetAmSbv06fW7GT.htm
@@ -1,9 +1,8 @@
 Name: Perpetual Perfection (Mutagenist)
 Nom: Perfection perpétuelle (Mutagèniste)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The greater versions of the mutagens you chose for perpetual infusions.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">La version supérieure des mutagènes que vous avez choisis pour vos infusions perpétuelles.&nbsp;</span></p>
+<p>La version supérieure des mutagènes que vous avez choisis pour vos infusions perpétuelles.</p>
