--- a/data/classfeatures/alchemist-17-eG7FBDjCdEFzW9V9.htm
+++ b/data/classfeatures/alchemist-17-eG7FBDjCdEFzW9V9.htm
@@ -1,9 +1,8 @@
 Name: Alchemical Mastery
 Nom: Maîtrise alchimique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your alchemical concoctions are incredibly effective. Your proficiency rank for your alchemist class DC increases to master.</p>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Vos décoctions alchimiques sont terriblement efficaces. Votre rang de maîtrise dans le DD de classe alchimiste devient maître.&nbsp;</span></p>
+<p>Vos décoctions alchimiques sont terriblement efficaces. Votre rang de maîtrise dans le DD de classe alchimiste devient maître.</p>
