relecture 6 premiers kits + consommables

--- a/data/equipment/equipment-03-P2DjThbSOWwra49r.htm
+++ b/data/equipment/equipment-03-P2DjThbSOWwra49r.htm
@@ -1,7 +1,6 @@
 Name: Snare Kit (Specialist)
 Nom: Nécessaire de fabrication de pièges artisanaux spécialisé
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This kit contains tools and materials for creating snares. A snare kit allows you to Craft snares using the Crafting skill. A specialist snare kit gives you a +1 item bonus to the check.</p>
@@ -11,4 +10,9 @@ Nom: Nécessaire de fabrication de pièges artisanaux spécialisé
 <li>+1 item bonus to Crafting checks to Craft snares</li>
 </ul>
 ------ Description (fr) ------
-<p><span class="fontstyle0">Ce kit contient des outils et du matériel pour fabriquer des pièges artisanaux. Un kit de braconnage vous permet de Fabriquer des pièges artisanaux à l’aide de la compétence Artisanat. Un kit de braconnage spécialisé vous accorde un bonus d’objet de +1 au test.</span> </p>
+<p>Ce kit contient des outils et du matériel pour fabriquer des pièges artisanaux. Un kit de braconnage spécialisé vous permet de Fabriquer des pièges artisanaux à l’aide de la compétence Artisanat et vous accorde un bonus d’objet de +1 au test.</p>
+<hr />
+<p>Effets automatiquement appliqués :</p>
+<ul>
+<li>bonus d'objet de +1 au test d'Atrisanat pour Fabriquer des Pièges artisanaux</li>
+</ul>
