--- a/data/equipment/kit-9RxYSGp86HKtK8R8.htm
+++ b/data/equipment/kit-9RxYSGp86HKtK8R8.htm
@@ -1,6 +1,6 @@
 Name: Class Kit (Swashbuckler)
-Nom: 
-État: auto-trad
+Nom: Kit de classe (Bretteur)
+État: libre
 
 ------ Description (en) ------
 <div><strong>Armor</strong> leather armor</div>
@@ -8,7 +8,7 @@ Nom:
 <div><strong>Gear</strong> adventurer's pack</div>
 <div><strong>Options</strong> @Compendium[pf2e.equipment-srd.1k3AsSW7lpU0kEpY]{Buckler} (1 gp), @Compendium[pf2e.equipment-srd.DA3HgyEBGEbtRNOo]{Dueling Cape} (5 sp), @Compendium[pf2e.equipment-srd.jJZbdMHMdh8UL2j8]{Clothing (Fine)} (2 gp), @Compendium[pf2e.equipment-srd.6DCy7tEF1cxaIJMy]{Grappling Hook} (1 sp), @Compendium[pf2e.equipment-srd.iWcw1sFLAzByVLBP]{Main-Gauche} (5 sp)</div>
 ------ Description (fr) ------
-<div><strong>Armure</strong> armure en cuir</div>
-<div><strong>Armes</strong> arbalète à main avec 20 carreaux, rapière</div>
-<div><strong>Équipement</strong> sac d'aventurier's</div>
-<div><strong>Options</strong> @Compendium[pf2e.equipment-srd.1k3AsSW7lpU0kEpY]{Buckler} (1 gp), @Compendium[pf2e.equipment-srd.DA3HgyEBGEbtRNOo]{Cape de duel} (5 sp), @Compendium[pf2e.equipment-srd.jJZbdMHMdh8UL2j8]{Vêtements (fins)} (2 gp), @Compendium[pf2e.equipment-srd.6DCy7tEF1cxaIJMy]{Crochet à grappin} (1 sp), @Compendium[pf2e.equipment-srd.iWcw1sFLAzByVLBP]{Gauche principale} (5 sp)</div>
+<p><strong>Armes</strong> arbalète à main avec 20 carreaux, rapière</p>
+<p><strong>Armure</strong> armure en cuir</p>
+<p><strong>Équipement</strong> Pack d'aventurier</p
+<p><strong>Options</strong> @Compendium[pf2e.equipment-srd.1k3AsSW7lpU0kEpY]{Targe} (1 po), @Compendium[pf2e.equipment-srd.DA3HgyEBGEbtRNOo]{Cape de duel} (5 pa), @Compendium[pf2e.equipment-srd.jJZbdMHMdh8UL2j8]{Vêtements (beaux)} (2 po), @Compendium[pf2e.equipment-srd.6DCy7tEF1cxaIJMy]{Grappin} (1 sp), @Compendium[pf2e.equipment-srd.iWcw1sFLAzByVLBP]{Main-gauche} (5 pa)</p>
