--- a/data/equipment/equipment-00-h7gsRKv6rORYgsv0.htm
+++ b/data/equipment/equipment-00-h7gsRKv6rORYgsv0.htm
@@ -1,9 +1,8 @@
 Name: Snare Kit
-Nom: Nécessaire de fabrication de pièges artisanaux :
-État: changé
-État d'origine: officielle
+Nom: Nécessaire de fabrication de pièges artisanaux
+État: officielle
 
 ------ Description (en) ------
 <p>This kit contains tools and materials for creating snares. A snare kit allows you to Craft snares using the Crafting skill.</p>
 ------ Description (fr) ------
-<p><span class="fontstyle0"> ce kit contient des outils et du matériel pour fabriquer des pièges artisanaux. Un kit de braconnage vous permet de Fabriquer des pièges artisanaux à l’aide de la compétence Artisanat.</span> </p>
+<p>Ce kit contient des outils et du matériel pour fabriquer des pièges artisanaux. Un kit de fabrication de pièges artisanaux vous permet de Fabriquer des pièges artisanaux à l’aide de la compétence Artisanat.</p>
