--- a/data/equipment/kit-5WT7gdzHNb5BG1J0.htm
+++ b/data/equipment/kit-5WT7gdzHNb5BG1J0.htm
@@ -1,13 +1,12 @@
 Name: Class Kit (Witch)
 Nom: Kit de classe (sorcière)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <div><strong>Weapons</strong> sickle, sling with 20 bullets, staff</div>
 <div><strong>Gear</strong> adventurer's pack, explorer's clothing, material component pouch</div>
 <div><strong>Options</strong> @Compendium[pf2e.equipment-srd.Yf7maiRDmmHAyF82]{Cookware} (1 gp), @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Healer's Tools} (5 gp)</div>
 ------ Description (fr) ------
-<div><strong>Armes</strong> faucille, fronde avec 20 billes, bâton</div>
-<div><strong>Equipement </strong> pack de l'aventurier, vêtement d'explorateur, poche de composants matériels</div>
-<div><strong>Options</strong> <a class="entity-link" data-pack="pf2e.equipment-srd" data-id="Yf7maiRDmmHAyF82" draggable="true"><i class="fas fa-suitcase"></i> Articles de cuisine</a> (1 gp), <a class="entity-link" data-pack="pf2e.equipment-srd" data-id="s1vB3HdXjMigYAnY" draggable="true"><i class="fas fa-suitcase"></i> Outils de guérisseur</a> (5 gp)</div>
+<p><strong>Armes</strong> faucille, fronde avec 20 billes, bâton</p>
+<p><strong>Equipement </strong> pack de l'aventurier, vêtement d'explorateur, bourse de composants matériels</p>
+<p><strong>Options</strong> @Compendium[pf2e.equipment-srd.Yf7maiRDmmHAyF82]{Articles de cuisine} (1 po), @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Outils de guérisseur} (5 po)</p>
