--- a/data/equipment/kit-7E3sWotW56biNttA.htm
+++ b/data/equipment/kit-7E3sWotW56biNttA.htm
@@ -1,7 +1,6 @@
 Name: Class Kit (Ranger)
 Nom: Kit de classe (Rôdeur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <div><strong>Armor</strong> leather armor</div>
@@ -9,6 +8,7 @@ Nom: Kit de classe (Rôdeur)
 <div><strong>Gear</strong> adventurer's pack</div>
 <div><strong>Options</strong> @Compendium[pf2e.equipment-srd.MVAWttmT0QDa7LsV]{longbow} with 20 @Compendium[pf2e.equipment-srd.w2ENw2VMPcsbif8g]{arrows} (6 gp, 2 sp), @Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{longsword} and @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{steel shield} (3 gp), 2 @Compendium[pf2e.equipment-srd.7tKkkF8eZ4iCLJtp]{shortswords} (1 gp, 8 sp), @Compendium[pf2e.equipment-srd.h7gsRKv6rORYgsv0]{snare kit} (5 gp)</div>
 ------ Description (fr) ------
-<div><strong>Armure</strong> armure de cuir</div>
-<div><strong>Armes</strong>  dague, arc long avec 20 flèches</div>
-<div><strong>Equipement</strong> pack d’aventurier, gaine</div>
+<p><strong>Armure</strong> armure de cuir</p>
+<p><strong>Armes</strong> dague</p>
+<p><strong>Équipement</strong> pack d’aventurier, gaine</p>
+<p><strong>Options</strong> @Compendium[pf2e.equipment-srd.MVAWttmT0QDa7LsV]{arc long} avec 20 @Compendium[pf2e.equipment-srd.w2ENw2VMPcsbif8g]{flêches} (6 po, 2 pa), @Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{épée longue} et @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{bouclier en acier} (3 po), 2 @Compendium[pf2e.equipment-srd.7tKkkF8eZ4iCLJtp]{épées courtes} (1 po, 8 pa), @Compendium[pf2e.equipment-srd.h7gsRKv6rORYgsv0]{Nécessaire de fabrication de pièges artisanaux} (5 po)</p>
