--- a/data/equipment/kit-Ac0BSiDJhtMmPnge.htm
+++ b/data/equipment/kit-Ac0BSiDJhtMmPnge.htm
@@ -1,7 +1,6 @@
 Name: Class Kit (Oracle)
 Nom: Kit de classe (oracle)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <div><strong>Armor</strong> studded leather armor</div>
@@ -9,7 +8,7 @@ Nom: Kit de classe (oracle)
 <div><strong>Gear</strong> adventurer's pack</div>
 <div><strong>Options</strong> @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{Steel Shield} (2 gp), @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Healer's Tools} (5 gp)</div>
 ------ Description (fr) ------
-<div><strong>Armure</strong> studded leather armor</div>
-<div><strong>Armes</strong> Masse, fronde avec 20 billes</div>
-<div><strong>Equipement</strong> pack de l'aventurier</div>
-<div><strong>Options</strong> <a class="entity-link" draggable="true" data-pack="pf2e.equipment-srd" data-id="Yr9yCuJiAlFh3QEB"><i class="fas fa-suitcase"></i> Bouclier d'acier</a> (2 gp), <a class="entity-link" draggable="true" data-pack="pf2e.equipment-srd" data-id="s1vB3HdXjMigYAnY"><i class="fas fa-suitcase"></i> Outils de guérisseur</a> (5 gp)</div>
+<p><strong>Armes</strong> Masse, fronde avec 20 billes</p>
+<p><strong>Armure</strong> Armure de cuir cloutée</p>
+<p><strong>Équipement</strong> pack d'aventurier</p>
+<p><strong>Options</strong> @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{Bouclier d'acier} (2 po), @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Outils de guérisseur} (5 po)</p>
