--- a/data/equipment/kit-adNgRqqmkDDKhMRT.htm
+++ b/data/equipment/kit-adNgRqqmkDDKhMRT.htm
@@ -1,9 +1,11 @@
 Name: Class Kit (Barbarian)
 Nom: Kit de classe (Barbare)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <div><strong>Armor</strong> hide armor<br /><strong>Weapons</strong> 4 javelins<br /><strong>Gear</strong> adventurer's pack, grappling hook<br /><strong>Options</strong> @Compendium[pf2e.equipment-srd.8COlYvHe6hKCXY8x]{greataxe} (2 gp), @Compendium[pf2e.equipment-srd.kdGqnqbrwPzQfTsm]{greatclub} (1 gp), @Compendium[pf2e.equipment-srd.UX71GkWBL9g41VwM]{greatsword} (2 gp), or @Compendium[pf2e.equipment-srd.War0uyLBx1jA0Ge7]{battle axe} and @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{steel shield} (3 gp)</div>
 ------ Description (fr) ------
-<div><strong>Armure</strong> armure de peau<br><strong>Armes</strong> 4 javelines<br><strong>Equipement</strong>  pack d’aventurier, grappin, 2 gaines<br><strong>Options</strong>  grande hache (2 po), massue (1 po), épée à deux mains<br>(2 po), ou hache d’armes et bouclier en acier (3 po)</div>
+<p><strong>Armes</strong> 4 javelines</p>
+<p><strong>Armure</strong> armure de peau</p>
+<p><strong>Équipement</strong>  pack d’aventurier, grappin, 2 gaines</p>
+<p><strong>Options</strong>  @Compendium[pf2e.equipment-srd.8COlYvHe6hKCXY8x]{grande hache} (2 po), @Compendium[pf2e.equipment-srd.kdGqnqbrwPzQfTsm]{massue} (1 po), @Compendium[pf2e.equipment-srd.UX71GkWBL9g41VwM]{épée à deux mains} (2 po) ou @Compendium[pf2e.equipment-srd.War0uyLBx1jA0Ge7]{hache d’armes} et @Compendium[pf2e.equipment-srd.Yr9yCuJiAlFh3QEB]{bouclier en acier} (3 po)</p>
