--- a/data/equipment/weapon-15-tD4ZNDutHoCGIFQn.htm
+++ b/data/equipment/weapon-15-tD4ZNDutHoCGIFQn.htm
@@ -1,6 +1,7 @@
-Name: Blade of the BlaDk Soverign
+Name: Blade of the Black Soverign
 Nom: Lame du Souverain Noir
-État: libre
+État: changé
+État d'origine: libre
 
 ------ Description (en) ------
 <p>This +2 greater striking @Compendium[pf2e.equipment-srd.NVst7e69agGG9Qwd]{Shock} greatsword is forged from standard-grade adamantine, with inlays of broken circuitry and a robot's ocular lens on the cross guard. A soft thrum comes from the blade, which you feel as a subtle pulse through the grip when wielding it. It sparks when unsheathed, emitting dim light within 5 feet.</p>
