--- a/data/classes/4wrSCyX6akmyo7Wj.htm
+++ b/data/classes/4wrSCyX6akmyo7Wj.htm
@@ -1,6 +1,7 @@
 Name: Investigator
 Nom: Enquêteur
-État: libre
+État: changé
+État d'origine: libre
 
 ------ Description (en) ------
 <p><em>You seek to uncover the truth, doggedly pursuing leads to reveal the plots of devious villains, discover ancient secrets, or unravel other mysteries. Your analytical mind quickly formulates solutions to complicated problems and your honed senses identify even the most obscure clues. Wielding knowledge as a weapon, you study the creatures and dangers you encounter to exploit their weaknesses.</em></p>
@@ -20,14 +21,14 @@ Nom: Enquêteur
 <p>You study up on subjects new and old, make new allies you can share information with, and pursue hobbies that keep your active mind satisfied. You might make a bit of coin on the side working as a private detective or consulting with the local constabulary.</p>
 <h2>You Might...</h2>
 <ul>
-<li>Start asking questions-including several that are quite involved-immediately after you’re presented with a conundrum.</li>
+<li>Start asking questions-including several that are quite involved-immediately after you're presented with a conundrum.</li>
 <li>Strive to uncover the deeper meanings behind anything you encounter and to identify the social machinations that truly drive events behind the scenes.</li>
 <li>Get so involved in a case that you ignore other matters, deeming them trivial.</li>
 </ul>
 <h2>Others Probably...</h2>
 <ul>
 <li>Find the cascades of information you spout forth extremely helpful, if difficult to fully comprehend.</li>
-<li>Get a bit annoyed that you’re such a know-it-all.</li>
+<li>Get a bit annoyed that you're such a know-it-all.</li>
 <li>Rely on you to solve mysteries, puzzles, or other challenges requiring intellectual curiosity and reasoning.</li>
 </ul>
 <h1>Initial Proficiencies</h1>
@@ -45,7 +46,7 @@ Nom: Enquêteur
 <h2>Class DC</h2>
 <p>Trained in investigator class DC</p>
 <h1>Class Features</h1>
-<p>You gain these abilities as an investigator. Abilities gained at higher levels list the level at which you gain them next to the features’ names.</p>
+<p>You gain these abilities as an investigator. Abilities gained at higher levels list the level at which you gain them next to the features' names.</p>
 <table class="pf2-table">
 <thead>
 <tr>
@@ -160,48 +161,48 @@ Nom: Enquêteur
 <h2 class="title">Skill Feats<span style="float: right;">Level 2</span></h2>
 <p>At 2nd level and every 2 levels thereafter, you gain a skill feat. You must be trained or better in the corresponding skill to select a skill feat.</p>
 <h2 class="title">Skill Increases<span style="float: right;">Level 2</span></h2>
-<p>You gain more skill increases than members of other classes. At 2nd level and every level thereafter, you gain a skill increase. You can use this increase to either become trained in one skill you’re untrained in or to become an expert in one skill in which you’re already trained.</p>
-<p>At 7th level, you can use skill increases to become a master in a skill in which you’re already an expert, and at 15th level, you can use them to become legendary in a skill in which you’re already a master.</p>
+<p>You gain more skill increases than members of other classes. At 2nd level and every level thereafter, you gain a skill increase. You can use this increase to either become trained in one skill you're untrained in or to become an expert in one skill in which you're already trained.</p>
+<p>At 7th level, you can use skill increases to become a master in a skill in which you're already an expert, and at 15th level, you can use them to become legendary in a skill in which you're already a master.</p>
 <h2 class="title">General Feats<span style="float: right;">Level 3</span></h2>
 <p>At 3rd level and every 4 levels thereafter, you gain a general feat.</p>
 <h2 class="title">Keen Recollection <span style="float: right;">Level 3</span></h2>
-<p>You can recall pertinent facts on topics that aren’t your specialty. Your proficiency bonus to untrained skill checks to Recall Knowledge is equal to your level instead of +0.</p>
+<p>You can recall pertinent facts on topics that aren't your specialty. Your proficiency bonus to untrained skill checks to Recall Knowledge is equal to your level instead of +0.</p>
 <h2>Skillful Lessons<span style="float: right;">Level 3</span></h2>
 <p>At 3rd level and every odd-numbered level thereafter, you gain a skill feat. This feat must be for an Intelligence-, Wisdom-, or Charisma-based skill, or for the skill you gained from your methodology.</p>
 <h2>Ability Boosts<span style="float: right;">Level 5</span></h2>
-<p>At 5th level and every 5 levels thereafter, you boost four different ability scores. You can use these ability boosts to increase your ability scores above 18. Boosting an ability score increases it by 1 if it’s already 18 or above, or by 2 if it starts out below 18.</p>
+<p>At 5th level and every 5 levels thereafter, you boost four different ability scores. You can use these ability boosts to increase your ability scores above 18. Boosting an ability score increases it by 1 if it's already 18 or above, or by 2 if it starts out below 18.</p>
 <h2>Ancestry Feats<span style="float: right;">Level 5</span></h2>
 <p>In addition to the ancestry feat you started with, you gain an ancestry feat at 5th level and every 4 levels thereafter.</p>
 <h2>Weapon Expertise<span style="float: right;">Level 5</span></h2>
-<p>You’ve dedicated yourself to learning the intricacies of your weapons. Your proficiency ranks for simple weapons, martial weapons, and unarmed attacks increase to expert.</p>
+<p>You've dedicated yourself to learning the intricacies of your weapons. Your proficiency ranks for simple weapons, martial weapons, and unarmed attacks increase to expert.</p>
 <h2>Vigilant Senses<span style="float: right;">Level 7</span></h2>
-<p>Through your adventures, you’ve developed keen awareness and attention to detail. Your proficiency rank in Perception increases to master.</p>
+<p>Through your adventures, you've developed keen awareness and attention to detail. Your proficiency rank in Perception increases to master.</p>
 <h2>Weapon Specialization<span style="float: right;">Level 7</span></h2>
-<p>You can inflict greater injuries with the weapons you know best. You deal 2 additional damage with weapons and unarmed attacks in which you are an expert. This damage increases to 3 if you’re a master and 4 if you’re legendary.</p>
+<p>You can inflict greater injuries with the weapons you know best. You deal 2 additional damage with weapons and unarmed attacks in which you are an expert. This damage increases to 3 if you're a master and 4 if you're legendary.</p>
 <h2>Great Fortitude<span style="float: right;">Level 9</span></h2>
 <p>Your physique is incredibly hardy. Your proficiency rank for Fortitude saves increases to expert.</p>
 <h2>Investigator Expertise<span style="float: right;">Level 9</span></h2>
-<p>You’ve refined your investigative techniques to an exceptional degree. Your circumstance bonus from Pursue a Lead increases to +2. Your proficiency rank for your investigator class DC increases to expert.</p>
+<p>You've refined your investigative techniques to an exceptional degree. Your circumstance bonus from Pursue a Lead increases to +2. Your proficiency rank for your investigator class DC increases to expert.</p>
 <h2>Dedcutive Improvisation<span style="float: right;">Level 11</span></h2>
-<p>You use your skills at deduction to perform whatever task is necessary to solve the case. You can attempt any check that requires you to be trained in a skill, even if you’re untrained in it; you can attempt any check that requires you to have expert proficiency in a skill so long as you’re trained in it; and you can attempt any check that requires you to have master proficiency in a skill as long as you have expert proficiency in it.</p>
+<p>You use your skills at deduction to perform whatever task is necessary to solve the case. You can attempt any check that requires you to be trained in a skill, even if you're untrained in it; you can attempt any check that requires you to have expert proficiency in a skill so long as you're trained in it; and you can attempt any check that requires you to have master proficiency in a skill as long as you have expert proficiency in it.</p>
 <h2>Resolve<span style="float: right;">Level 11</span></h2>
-<p>You’ve steeled your mind with resolve. Your proficiency rank for Will saves increases to master. When you roll a success on a Will save, you get a critical success instead.</p>
+<p>You've steeled your mind with resolve. Your proficiency rank for Will saves increases to master. When you roll a success on a Will save, you get a critical success instead.</p>
 <h2>Incredible Senses<span style="float: right;">Level 13</span></h2>
 <p>You notice things that are almost impossible for an ordinary person to detect. Your proficiency rank for Perception increases to legendary.</p>
 <h2>Light Armor Expertise<span style="float: right;">Level 13</span></h2>
-<p>You’ve learned how to dodge while wearing light or no armor. Your proficiency ranks for light armor and unarmored defense increase to expert.</p>
+<p>You've learned how to dodge while wearing light or no armor. Your proficiency ranks for light armor and unarmored defense increase to expert.</p>
 <h2>Weapon Mastery<span style="float: right;">Level 13</span></h2>
 <p>You fully understand your weapons. Your proficiency ranks for simple weapons, martial weapons, and unarmed attacks increase to master.</p>
 <h2>Evasion<span style="float: right;">Level 15</span></h2>
-<p>You’ve learned to move quickly to avoid explosions, a dragon’s breath, and worse. Your proficiency rank for Reflex saves increases to master. When you roll a success on a Reflex save, you get a critical success instead.</p>
+<p>You've learned to move quickly to avoid explosions, a dragon's breath, and worse. Your proficiency rank for Reflex saves increases to master. When you roll a success on a Reflex save, you get a critical success instead.</p>
 <h2>Greater Weapon Specialization<span style="float: right;">Level 15</span></h2>
-<p>Your damage from weapon specialization increases to 4 with weapons and unarmed attacks in which you’re an expert, 6 if you’re a master, and 8 if you’re legendary.</p>
+<p>Your damage from weapon specialization increases to 4 with weapons and unarmed attacks in which you're an expert, 6 if you're a master, and 8 if you're legendary.</p>
 <h2>Greater Resolve<span style="float: right;">Level 17</span></h2>
 <p>Your unbelievable training grants you mental resiliency. Your proficiency rank for Will saves increases to legendary. When you roll a success on a Will save, you get a critical success. When you roll a critical failure on a Will save, you get a failure instead. When you fail a Will save against a damaging effect, you take half damage.</p>
 <h2>Light Armor Mastery<span style="float: right;">Level 19</span></h2>
 <p>Your skill with light armor improves, increasing your ability to dodge blows. Your proficiency ranks for light armor and unarmored defense increase to master.</p>
 <h2>Master Detective<span style="float: right;">Level 19</span></h2>
-<p>As a master detective, you can solve any case and find all the clues available. If you’re pursuing the subject of a lead and you enter a new location that includes another clue toward solving the mystery, the GM informs you of the existence of the clue and its type: an object, person, spell effect, or the like. When you find the clue, the GM informs you that you’ve done so. If there is more than one clue in the location, the GM chooses one to inform you about. When you find any of the clues in that location, the GM informs you that you’ve done so, even if it wasn’t the clue they’d chosen or there are other clues you haven’t found. Your proficiency rank for your investigator class DC increases to master.</p>
+<p>As a master detective, you can solve any case and find all the clues available. If you're pursuing the subject of a lead and you enter a new location that includes another clue toward solving the mystery, the GM informs you of the existence of the clue and its type: an object, person, spell effect, or the like. When you find the clue, the GM informs you that you've done so. If there is more than one clue in the location, the GM chooses one to inform you about. When you find any of the clues in that location, the GM informs you that you've done so, even if it wasn't the clue they'd chosen or there are other clues you haven't found. Your proficiency rank for your investigator class DC increases to master.</p>
 ------ Description (fr) ------
 <p><em>Vous cherchez à découvrir la vérité et vous remontez des pistes sans lâcher prise pour dévoiler des complots rusés, découvrir d’anciens secrets ou percer des mystères. Votre esprit analytique formule rapidement des solutions aux problèmes les plus complexes et vos sens affutés donnent même un sens aux indices les plus obscurs. Armé de vos connaissances, vous étudiez les créatures et les dangers que vous rencontrez afin d’exploiter leurs points faibles.</em></p>
 <p><strong>Caractéristique essentielle : INTELLIGENCE</strong></p>
