--- a/data/equipment/weapon-18-1gi4mdZYNgPrzWHc.htm
+++ b/data/equipment/weapon-18-1gi4mdZYNgPrzWHc.htm
@@ -1,6 +1,7 @@
 Name: Life's Last Breath
 Nom: Le Dernier souffle de vie
-État: libre
+État: changé
+État d'origine: libre
 
 ------ Description (en) ------
 <p>The twin serrated blades of this legendary rhoka sword are dull black and constantly drip with blood. Life's Last Breath is said to have been forged centuries ago for an unknown urdefhan general and has since fallen into the hands of countless other powerful urdefhan warlords.</p>
@@ -9,12 +10,12 @@ Nom: Le Dernier souffle de vie
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> command</p>
 <p><strong>Frequency</strong> once per day</p>
 <p><strong>Requirements</strong> You successfully Strike a creature with <em>Life's Last Breath</em></p>
-<p><strong>Effect</strong> You cast a 9th-level @Compendium[pf2e.spells-srd.DDQHaLrYXMI37dvW]{Paralyze} spell on the target.</p>
+<p><strong>Effect</strong> You cast a 9th-level @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralyze} spell on the target.</p>
 <hr />
 <p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">R</span> envision</p>
 <p><strong>Frequency</strong> once per 10 minutes</p>
 <p><strong>Trigger</strong> You successfully Strike a creature with <em>Life's Last Breath</em></p>
-<p><strong>Effect</strong> The target must succeed at a DD 38 Fortitude save or take [[/r 4d6]] negative damage; you gain an equal amount of temporary Hit Points that last 1 minute.</p>
+<p><strong>Effect</strong> The target must succeed at a DC 38 Fortitude save or take [[/r 4d6]] negative damage; you gain an equal amount of temporary Hit Points that last 1 minute.</p>
 ------ Description (fr) ------
 <p>Les deux lames dentelées de cette légendaire épée Rhoka sont d'un noir mat qui dégoulinent constamment de sang. On dit que le Dernier souffle de vie a été forgée il y a des siècles pour un général Urdefhan inconnu et qu'elle est depuis tombée entre les mains d'innombrables autres puissants seigneurs de guerre Urdefhan.</p>
 <p>Le Dernier souffle de vie est une épée de frappe supérieure @Compendium[pf2e.equipment-srd.gmMrJREf4JSHd2dZ]{Impie} @Compendium[pf2e.equipment-srd.fo6Yhq5mbQXsnZs0]{Sanglante} +3 Rhoka avec les capacités spéciales suivantes ;
