moulinette de traductions automatiques sur des éléments changés

--- a/data/pathfinder-bestiary/YUk9S6caKqheRsUQ.htm
+++ b/data/pathfinder-bestiary/YUk9S6caKqheRsUQ.htm
@@ -1,8 +1,9 @@
 Name: Riding Pony
 Nom: Poney de selle
-État: changé
+État: auto-trad
 État d'origine: officielle
 
 ------ Description (en) ------
 This entry did not have a separate description for the creature.<br /><br />
 ------ Description (fr) ------
+Cette entrée n'avait pas de description séparée pour la créature. <br /><br />
