--- a/data/spell-effects/04-T6XnxvsgvvOrpien.htm
+++ b/data/spell-effects/04-T6XnxvsgvvOrpien.htm
@@ -1,6 +1,6 @@
 Name: Spell Effect: Dinosaur Form (Stegosaurus)
 Nom: 
-État: changé
+État: auto-trad
 État d'origine: auto-trad
 
 ------ Description (en) ------
@@ -50,8 +50,8 @@ Nom:
 </ul>
 </li>
 </ul>
-<hr>
-<p><strong>Intensifié (5e)</strong> Votre forme de combat est Énorme et vos attaques ont une portée de 15 pieds, ou de 20 pieds si elles avaient au départ une portée de 15 pieds. À la place, vous gagnez 20 PV temporaires, un modificateur d'attaque de +18, un bonus aux dégâts de +6, le double des dés de dégâts, et Athlétisme +21.</p>
-<p><strong>Intensifié (7e)</strong> Votre forme de combat est gargantuesque et vos attaques ont une portée de 20 pieds, ou de 25 pieds si elles avaient une portée de 15 pieds au départ. À la place, vous gagnez AC = 21 + votre niveau, 25 HP temporaires, un modificateur d'attaque de +25, un bonus aux dégâts de +15, le double des dés de dégâts, et Athlétisme +25.</p>
+<hr />
+<p><strong>Intensifié (5e)</strong> Votre forme de combat est Énorme et vos attaques ont une portée de 15 pieds, ou de 20 pieds si elles avaient une portée de 15 pieds au départ. À la place, vous gagnez 20 PV temporaires, un modificateur d'attaque de +18, un bonus aux dégâts de +6, le double des dés de dégâts, et Athlétisme +21.</p>
+<p><strong>Intensifié (7e)</strong> Votre forme de combat est gargantuesque et vos attaques ont une portée de 20 pieds, ou de 25 pieds si elles avaient une portée de 15 pieds au départ. À la place, vous gagnez une CA = 21 + votre niveau, 25 PV temporaires, un modificateur d'attaque de +25, un bonus aux dégâts de +15, le double des dés de dégâts et un niveau d'athlétisme de +25.</p>
 <hr />
 <p><em>Remarque : pour accentuer cet effet, importez-le dans votre répertoire d'objets et modifiez le niveau avant de l'ajouter à la cible</em></p>
