--- a/data/spell-effects/06-TUyEeLyqdJL6PwbH.htm
+++ b/data/spell-effects/06-TUyEeLyqdJL6PwbH.htm
@@ -1,6 +1,6 @@
 Name: Spell Effect: Dragon Form (Silver)
 Nom: 
-État: changé
+État: auto-trad
 État d'origine: auto-trad
 
 ------ Description (en) ------
@@ -49,8 +49,8 @@ Nom:
 <ul>
 <li><strong>Silver</strong>
 <ul>
-<li>walk on clouds;</li>
-<li><strong>Melee</strong> <span class="pf2-icon">1</span> mâchoires, <strong>Dégâts</strong> 2d12 perçant plus 2d6 froid;</li>
+<li>cloud walk;</li>
+<li><strong>Melee</strong> <span class="pf2-icon">1</span> mâchoires, <strong>Damage</strong> 2d12 perçant plus 2d6 froid;</li>
 <li><strong>Melee</strong> <span class="pf2-icon">1</span> griffe (agile), <strong>Dégâts</strong> 3d10 coupant;</li>
 <li><strong>Melee</strong> <span class="pf2-icon">1</span> queue (portée 10), <strong>Dégâts</strong> 3d10 matraquage;</li>
 <li>arme à souffle cône de 30 pieds, [[/r 8d8 #froid]] froid.</li>
