--- a/data/pathfinder-bestiary/OPavstjKhgcp30fc.htm
+++ b/data/pathfinder-bestiary/OPavstjKhgcp30fc.htm
@@ -1,8 +1,9 @@
 Name: War Pony
 Nom: Poney de bataille
-État: changé
+État: auto-trad
 État d'origine: officielle
 
 ------ Description (en) ------
 This entry did not have a separate description for the creature.<br /><br />
 ------ Description (fr) ------
+Cette entrée n'avait pas de description séparée pour la créature. <br /><br />
