--- a/data/spell-effects/01-6embuvXCpS3YOD5u.htm
+++ b/data/spell-effects/01-6embuvXCpS3YOD5u.htm
@@ -1,6 +1,6 @@
 Name: Spell Effect: Resilient Touch
 Nom: 
-État: changé
+État: auto-trad
 État d'origine: auto-trad
 
 ------ Description (en) ------
@@ -8,5 +8,4 @@ Nom:
 <p>If the target is one of your allies, they also gain a +2 status bonus to AC and a +1 status bonus to their saving throws until the end of their next turn.</p>
 ------ Description (fr) ------
 <p>Accordé par @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} si vous avez @Compendium[pf2e.feats-srd.tCuMXQ0yMrCNwzqW]{Resilient Touch}.</p>
-<p>Si la cible est l'un de vos alliés, ils gagnent également un bonus de statut +2 à la CA et un bonus de statut +1 à leurs jets de sauvegarde jusqu'à la fin de leur prochain tour.</p>
-<p>&nbsp;</p>
+Si la cible est l'un de vos alliés, il bénéficie également d'un bonus de statut de +2 à la CA et d'un bonus de statut de +1 à ses jets de sauvegarde jusqu'à la fin de son prochain tour.</p>
