--- a/data/spell-effects/05-ceEA7nBGNmoR8Sjj.htm
+++ b/data/spell-effects/05-ceEA7nBGNmoR8Sjj.htm
@@ -1,10 +1,9 @@
 Name: Spell Effect: Litany of Self-Interest
 Nom: 
-État: changé
+État: auto-trad
 État d'origine: auto-trad
 
 ------ Description (en) ------
 <p>Granted by failing the save against @Compendium[pf2e.spells-srd.mm3hZ6jgaJaKK16n]{Litany of Self-Interest}.</p>
 ------ Description (fr) ------
 <p>Accordé en échouant au test de sauvegarde contre @Compendium[pf2e.spells-srd.mm3hZ6jgaJaKK16n]{Litany of Self-Interest}.</p>
-<p>&nbsp;</p>
