--- a/data/feats/ancestry-01-sL2GmYve5NXJ0wc1.htm
+++ b/data/feats/ancestry-01-sL2GmYve5NXJ0wc1.htm
@@ -10,4 +10,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie nidalaise</p>
 <hr />
-<p>La pénombre recèle peu de terreurs en ce qui vous concerne et la chappe de noirceur sur le Nidal vous a habitué à une lumière atténuée. Vous obtenez la vision nocturne.</p>
+<p>La pénombre recèle peu de terreurs en ce qui vous concerne et la chappe de noirceur sur le Nidal vous a habitué à une lumière atténuée. Vous obtenez  @Compendium[pf2e.bestiary-ability-glossary-srd.fFu2sZz4KB01fVRc]{vision nocturne}.</p>
