--- a/data/feats/ancestry-01-shp63QZvw9xvkVvC.htm
+++ b/data/feats/ancestry-01-shp63QZvw9xvkVvC.htm
@@ -14,4 +14,4 @@ PrereqFR:
 <p><strong>Accès</strong> ethnie vudraine</p>
 <p><strong>Déclencheur</strong> Vous obtenez un échec critique sur un jet de sauvegarde contre un effet d'émotion.</p>
 <hr />
-<p>Vous vous recentrez sur vous-même et faites appel à l'esprit de l'idéal monastique vudrain du vide de l'esprit et de la connaissance intérieure. Vous obtenez un échec au jet de sauvegarder contre l'effet d'émotion au lieu de l'échec critique.</p>
+<p>Vous vous recentrez sur vous-même et faites appel à l'esprit de l'idéal monastique Vudrain du vide de l'esprit et de la connaissance intérieure. Vous obtenez un échec au jet de sauvegarder contre l'effet d'émotion au lieu de l'échec critique.</p>
