--- a/data/feats/ancestry-05-1miLVRtvsnZU6TTk.htm
+++ b/data/feats/ancestry-05-1miLVRtvsnZU6TTk.htm
@@ -8,4 +8,4 @@ PrereqFR:
 ------ Description (en) ------
 <p>Small roots sprout from your feet, steadying you as you move. You gain the @Compendium[pf2e.feats-srd.CnqMJR8e9jqJR7MM]{Steady Balance} skill feat, even if you aren’t trained in Acrobatics, and you can use the @Compendium[pf2e.actionspf2e.xpsD4DsYHKXCB4ac]{Anchor} action.</p>
 ------ Description (fr) ------
-<p>De petites racines sortent de vos pieds, vous rendant plus stable lorsque vous vous déplacez. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.CnqMJR8e9jqJR7MM]{Équilibre stable}, même si vous n'êtes pas qualifié en Acrobaties et vous pouvez utiliser l'action S'ancrer.</p>
+<p>De petites racines sortent de vos pieds, vous rendant plus stable lorsque vous vous déplacez. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.CnqMJR8e9jqJR7MM]{Équilibre stable}, même si vous n'êtes pas qualifié en Acrobaties et vous pouvez utiliser l'action @Compendium[pf2e.actionspf2e.xpsD4DsYHKXCB4ac]{S'ancrer}.</p>
