--- a/data/feats/ancestry-01-ZxiAMposVPDNPwxI.htm
+++ b/data/feats/ancestry-01-ZxiAMposVPDNPwxI.htm
@@ -12,4 +12,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Accès</strong> ethnie de nain vivant sous la surface</p>
 <hr />
-<p>Votre cycle de repos inhabituel vous permet de récupérer plus vite. tant que vous pouvez vous reposer pendant 12 heures, vous obtenez les effets du don général @Compendium[pf2e.feats-srd.N8Xz5fuW6o7GW124]{Récupération rapide} et vous pouvez rester 20 heures sans repos avant de devenir @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}</p>
+<p>Votre cycle de repos inhabituel vous permet de récupérer plus vite. Tant que vous pouvez vous reposer pendant 12 heures, vous obtenez les effets du don général @Compendium[pf2e.feats-srd.N8Xz5fuW6o7GW124]{Récupération rapide} et vous pouvez rester 20 heures sans repos avant de devenir @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}</p>
