--- a/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
+++ b/data/feats/ancestry-01-yQZ6naE8AP6JYTSH.htm
@@ -2,8 +2,7 @@ Name: Ember's Eyes
 Nom: Yeux de braise
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Your eyes blaze with inner flame. You gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if your ancestry already has low-light vision.</p>
@@ -12,4 +11,4 @@ PrereqFR:
 ------ Description (fr) ------
 <p>Vos yeux s'embrasent de votre flamme intérieure. Vous obtenez @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Vision nocturne} ou vous obtenez @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Vision dans le noir} si votre  ascendance possède déjà vision nocturne.</p>
 <hr />
-<p><strong>Spécial</strong> Si votre ascendance n'a ni vision nocturne, ni vision dans le noir, vous pouvez prendre ce don d'ascendance une seconde fois pour obtenir vision dans le noir. Vous ne pouvez pas vous entraîner pour l'acquérir.</p>
+<p><strong>Spécial</strong> Si votre ascendance ne possède ni vision nocturne, ni vision dans le noir, vous pouvez prendre ce don d'ascendance une seconde fois pour obtenir vision dans le noir. Vous ne pouvez pas utiliser le réapprentissage pour le perdre.</p>
