--- a/data/feats/ancestry-05-qZUdGd2khS9cq4hJ.htm
+++ b/data/feats/ancestry-05-qZUdGd2khS9cq4hJ.htm
@@ -12,4 +12,4 @@ PrereqFR: forme alternative sans queue
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
-<p>Vous maniez de nombreux visages, même ceux qui ne vous appartiennent pas. Lorsque vous Changez de forme pour passer à votre forme sans queue, vous obtenez les effets d'un @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} de niveau 3 pendant 1 heure ou jusqu'à ce que vous vous changiez de nouveau, à moins que ce ne soit un effet de transmutation au lieu d'une illusion.</p>
+<p>Vous maniez de nombreux visages, même ceux qui ne vous appartiennent pas. Lorsque vous @Compendium[pf2e.ancestryfeatures.Ymg6WqeJqOyLJLEr]{Changez de forme} pour passer à votre forme sans queue, vous obtenez les effets d'un @Compendium[pf2e.spells-srd.i35dpZFI7jZcRoBo]{Déguisement illusoire} de niveau 3 pendant 1 heure ou jusqu'à ce que vous vous changiez de nouveau, à moins que ce ne soit un effet de transmutation au lieu d'une illusion.</p>
