--- a/data/pathfinder-bestiary-2/8a9N2iPA5HLpkWaF.htm
+++ b/data/pathfinder-bestiary-2/8a9N2iPA5HLpkWaF.htm
@@ -1,8 +1,8 @@
 Name: Army Ant Swarm
-Nom: Nuée de Fourmis Légionnaires
+Nom: Nuée de fourmis légionnaires
 État: libre
 
 ------ Description (en) ------
 An army ant swarm is a terrifying carpet of stinging insects that devours all in its path.<br /><br />
 ------ Description (fr) ------
-Une Nuée de Fourmis Légionnaires est un tapis terrifiant d'insectes piqueurs qui dévorent tout sur son passage.<br /><br />
+Une nuée de fourmis légionnaires est un tapis terrifiant d'insectes piqueurs qui dévore tout sur son passage.<br /><br />
